--- a/_posts/2009-04-07-자동-저장-문서.md
+++ b/_posts/2009-04-07-자동-저장-문서.md
@@ -1,6 +1,6 @@
 ---
 id: 36
-title: '&#8216;기사본문 출력하기&#8217; 기능이 추가되었습니다!'
+title: '‘기사본문 출력하기’ 기능이 추가되었습니다!'
 date: 2009-04-07T12:34:50+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -33,7 +33,7 @@ tags:
 
 
 <div style="width: 310px" class="wp-caption alignright">
-  <img src="http://work.local/webmaster/wp-content/uploads/1/cfile7.uf.1163114A4D0846F51DFC67.jpg" width="300" height="390" alt="<레프트21>의 본문보기 페이지&#8221; />
+  <img src="http://work.local/webmaster/wp-content/uploads/1/cfile7.uf.1163114A4D0846F51DFC67.jpg" width="300" height="390" alt="<레프트21>의 본문보기 페이지” />
   
   <p class="wp-caption-text">
     본문 오른쪽 상단의 인쇄 버튼을 누르세요
@@ -42,7 +42,7 @@ tags:
 
 ### 1. 기사 본문 화면
 
-그럼 인쇄과정을 간략하게 그림과 함께 보여드리겠습니다. 오른쪽 그림은 &#8220;G20회담&#8221;에 대한 기사를 클릭했을 때 나온 기사본문 화면입니다. 오른쪽 상단에 인쇄 버튼을 확대해서 잘 보이시죠?
+그럼 인쇄과정을 간략하게 그림과 함께 보여드리겠습니다. 오른쪽 그림은 “G20회담”에 대한 기사를 클릭했을 때 나온 기사본문 화면입니다. 오른쪽 상단에 인쇄 버튼을 확대해서 잘 보이시죠?
 
 인쇄할 때 사진이 함께 출력된다면 토너닳아지는 소리에 눈물나시겠죠? 인쇄버튼을 누르시면 제목과, 기사이름, 본문내용,입력날짜의 정보만 추려져서 새창으로 출력됩니다. 
 
@@ -57,7 +57,7 @@ tags:
 자 이 창에서도 인쇄버튼이 있죠? 더이상의 설정변경이 필요없다면, 인쇄버튼을 바로 누르시고 출력하시면 됩니다. 하지만 여백을 최소화해서 종이를 절약하고 싶다면, 창 상단의 메뉴에서 <span style="font-weight: bold;">파일 -> 인쇄 미리보기</span> 로 가셔서 여백을 조정할 수 있습니다. 그 방법은 아래에서 설명드리겠어요.
 
 <div style="width: 460px" class="wp-caption aligncenter">
-  <img src="http://work.local/webmaster/wp-content/uploads/1/cfile6.uf.181B1F4C4D0846F541E3C4.jpg" width="450" height="301" alt="<레프트21>의 인쇄페이지&#8221; />
+  <img src="http://work.local/webmaster/wp-content/uploads/1/cfile6.uf.181B1F4C4D0846F541E3C4.jpg" width="450" height="301" alt="<레프트21>의 인쇄페이지” />
   
   <p class="wp-caption-text">
     의 군더더기 없는 깔끔한 인쇄 페이지.
