--- a/_posts/2009-04-21-왕초보-블로거-활용팁-메타블로그를-활용해-손쉽게.md
+++ b/_posts/2009-04-21-왕초보-블로거-활용팁-메타블로그를-활용해-손쉽게.md
@@ -23,11 +23,11 @@ tags:
   </p>
   
   <p>
-    제가 말씀드릴려는 메타블로그는 이미 수천만을 넘어선 블로그들의 글들을 모아 정리, 분석하여 노출시켜주는 사이트를 말합니다. 쉽게 말하면, 블로그들의 &#8216;아고라&#8217;라고 할 수도 있겠습니다. 많은 경우 어떤 이슈에 대한 블로거들의 주장이나 생각들이 이곳에 모아지고, 여론을 형성하곤 합니다. 때문에 언론사들도 이런 메타사이트에 자신의 기사들을 송고하고 있습니다.
+    제가 말씀드릴려는 메타블로그는 이미 수천만을 넘어선 블로그들의 글들을 모아 정리, 분석하여 노출시켜주는 사이트를 말합니다. 쉽게 말하면, 블로그들의 ‘아고라’라고 할 수도 있겠습니다. 많은 경우 어떤 이슈에 대한 블로거들의 주장이나 생각들이 이곳에 모아지고, 여론을 형성하곤 합니다. 때문에 언론사들도 이런 메타사이트에 자신의 기사들을 송고하고 있습니다.
   </p>
   
   <p>
-    이미 많은 사이트들이 생겨났으나 몇개만 말씀드리자면, <a href="http://www.blogkorea.net/" target="_blank">블로그 코리아</a>, <a href="http://mixsh.com" target="_blank">믹시</a>, &#8216;<a href="www.daum.net" target="_blank" class="broken_link">다음</a>&#8216;의 <a href="http://bloggernews.media.daum.net" target="_blank" class="broken_link">블로거뉴스</a>, <a href="www.openblog.com" target="_blank" class="broken_link">오픈블로그</a> 등이 있습니다.(<a href="http://bloggertip.com/2390" target="_blank">메타블로그 모음</a>) 그 중 믹시라는 메타사이트는 누가 날 추천하는지, 내가 어떤 글을 추천하고 있는지, 쉽게 알 수 있도록 서비스를 제공하고 있습니다. 저는 믹시 정도만 간단히 소개하겠습니다(나머지는 비슷한 체제이므로 하나만 알면 다 하실 수 있을 겝니다)
+    이미 많은 사이트들이 생겨났으나 몇개만 말씀드리자면, <a href="http://www.blogkorea.net/" target="_blank">블로그 코리아</a>, <a href="http://mixsh.com" target="_blank">믹시</a>, ‘<a href="www.daum.net" target="_blank" class="broken_link">다음</a>‘의 <a href="http://bloggernews.media.daum.net" target="_blank" class="broken_link">블로거뉴스</a>, <a href="www.openblog.com" target="_blank" class="broken_link">오픈블로그</a> 등이 있습니다.(<a href="http://bloggertip.com/2390" target="_blank">메타블로그 모음</a>) 그 중 믹시라는 메타사이트는 누가 날 추천하는지, 내가 어떤 글을 추천하고 있는지, 쉽게 알 수 있도록 서비스를 제공하고 있습니다. 저는 믹시 정도만 간단히 소개하겠습니다(나머지는 비슷한 체제이므로 하나만 알면 다 하실 수 있을 겝니다)
   </p>
   
   <p>
@@ -51,7 +51,7 @@ tags:
       <legend>다음 블로거 뉴스</legend> 
       
       <p>
-        * &#8220;<a href="http://www.kamiu.pe.kr/201" target="_blank" class="broken_link">메타 블로그 소개 &#8211; 다음 블로거 뉴스</a>&#8220;
+        * “<a href="http://www.kamiu.pe.kr/201" target="_blank" class="broken_link">메타 블로그 소개 - 다음 블로거 뉴스</a>“
       </p>
       
       <p>
@@ -71,7 +71,7 @@ tags:
       <legend>믹시(Mixsh)</legend> 
       
       <p>
-        * &#8220;<a href="http://delusiongalaxy.tistory.com/63" target="_blank" class="broken_link">믹시 가입 및 활용법</a>&#8220;
+        * “<a href="http://delusiongalaxy.tistory.com/63" target="_blank" class="broken_link">믹시 가입 및 활용법</a>“
       </p>
       
       <p>
@@ -94,7 +94,7 @@ tags:
       </p>
       
       <p>
-        * <a href="http://www.blogkorea.net/bnmsvc/blcow_introduce.jsp" class="broken_link">블로그 잇 &#8211; 위젯 가이드</a>
+        * <a href="http://www.blogkorea.net/bnmsvc/blcow_introduce.jsp" class="broken_link">블로그 잇 - 위젯 가이드</a>
       </p>
     </fieldset>
     
