--- a/_posts/2009-05-13-지난-호-보기-개선-그리고-효율적-사회-진보.md
+++ b/_posts/2009-05-13-지난-호-보기-개선-그리고-효율적-사회-진보.md
@@ -87,7 +87,7 @@ tags:
 
 자, 이 아래로는 기술적인 이야기입니다. 최대한 쉽게 써 보죠. ^^ 이 분야의 상식을 익히고 싶은 분들은 읽어도 됩니다. 그렇지 않은 분들은 읽을 필요가 없습니다.
 
-원래 지난 호 보기 &#8211; 목록으로 보기가 느렸던 이유는 간단합니다. 데이터베이스에 무려 10회 정도나 접속하면서 기사 목록을 불러왔기 때문입니다.
+원래 지난 호 보기 - 목록으로 보기가 느렸던 이유는 간단합니다. 데이터베이스에 무려 10회 정도나 접속하면서 기사 목록을 불러왔기 때문입니다.
 
 무슨 말인지 이해가 안 갈 수 있다고 생각해 그림을 이용해 이해를 돕겠습니다.
 
