--- a/_posts/2009-05-17-자바스크립트-링크-개선-웹접근성-강화.md
+++ b/_posts/2009-05-17-자바스크립트-링크-개선-웹접근성-강화.md
@@ -28,7 +28,7 @@ tags:
   </p>
 </div>
 
-위 그림은 <a href="www.left21.com" target="_blank" class="broken_link">레프트21</a>의 <a href="http://wspaper.org/1_news_all.php" target="_blank">전체보기 화면</a>의 하단입니다. 1부터 10까지의 페이지가 링크로 나열되어 있죠. 1번은 보고 있는 화면이니까 1번을 제외한 9개의 링크가 걸려있습니다. 2번 링크에 커서를 올려 놓았더니, 웹브라우져 하단에 링크의 주소가 표시됩니다. 앗! 보시다시피 주소가 javascript:goPage(&#8216;2&#8217;) 라고 표시되어 있네요. 즉, 2번 페이지 링크를 클릭하면 &#8216;자바스크립트 함수인 goPage라는 함수를 실행시켜라&#8217;라는 의미입니다. 레프트21의 모든 페이지 링크는 이런식으로 되어있었습니다.
+위 그림은 <a href="www.left21.com" target="_blank" class="broken_link">레프트21</a>의 <a href="http://wspaper.org/1_news_all.php" target="_blank">전체보기 화면</a>의 하단입니다. 1부터 10까지의 페이지가 링크로 나열되어 있죠. 1번은 보고 있는 화면이니까 1번을 제외한 9개의 링크가 걸려있습니다. 2번 링크에 커서를 올려 놓았더니, 웹브라우져 하단에 링크의 주소가 표시됩니다. 앗! 보시다시피 주소가 javascript:goPage(‘2’) 라고 표시되어 있네요. 즉, 2번 페이지 링크를 클릭하면 ‘자바스크립트 함수인 goPage라는 함수를 실행시켜라’라는 의미입니다. 레프트21의 모든 페이지 링크는 이런식으로 되어있었습니다.
 
 지금까지는 검색로봇이 레프트21 홈페이지의 전체보기 페이지로 도착했을때, 최근의 글 20개가 나와있는 페이지만 보게 되고, 나머지 링크들은 인식하지 못하였습니다. 이를 개선하여, 자바스크립트 함수 대신 직접 주소를 링크하는 방식으로 바꾸었습니다. 따라서 아래와 같이 되었죠.
 
@@ -52,9 +52,9 @@ tags:
 
 > http://wspaper.org/1\_news\_all.php?pageNo=2
 
-1\_news\_all.php는 모든 기사를 출력하는 페이지의 이름입니다. 그런데 뒤에 ?와 함께 &#8216;pageNo=2&#8217;라는 문자열이 붙여져 있죠? 종합해보면, 모든 기사를 출력하는 페이지의 두번째 페이지라는 뜻이 됩니다. 내부적으로는 pageNo라는 변수에 &#8216;2&#8217;라는 상수값을 넣어 다음 페이지에 넘겨주는 겁니다. 서버에서는 이 변수를 활용하여 두번째 페이지에 나올 글들을 뽑아서 웹브라우져에 뿌려주는 것이죠.
+1\_news\_all.php는 모든 기사를 출력하는 페이지의 이름입니다. 그런데 뒤에 ?와 함께 ‘pageNo=2’라는 문자열이 붙여져 있죠? 종합해보면, 모든 기사를 출력하는 페이지의 두번째 페이지라는 뜻이 됩니다. 내부적으로는 pageNo라는 변수에 ‘2’라는 상수값을 넣어 다음 페이지에 넘겨주는 겁니다. 서버에서는 이 변수를 활용하여 두번째 페이지에 나올 글들을 뽑아서 웹브라우져에 뿌려주는 것이죠.
 
-&#8216;javascript:goPage(2)&#8217;가 링크되었을 때보다 좀 더 직관적입니다. 이는 개발자가 유지보수 하는데에도 영향을 줍니다. 알기 힘든 링크구조는 검색로봇 뿐만아니라 개발자에게도 어려움을 준다는 것이죠.
+‘javascript:goPage(2)’가 링크되었을 때보다 좀 더 직관적입니다. 이는 개발자가 유지보수 하는데에도 영향을 줍니다. 알기 힘든 링크구조는 검색로봇 뿐만아니라 개발자에게도 어려움을 준다는 것이죠.
 
 읽기 힘드셨나요? 레프트21에 방문하시는 분들이 반드시 알아야 할 내용은 아닙니다. 다만, 웹접근성을 위해 웹마스터들이 노력하고 있다능! ㅎㅎ 참고로 다음 링크를 보시면 웹접근성을 떨어뜨리는 다른 예들을 보실 수가 있습니다. 
 
