--- a/_posts/2009-06-21-검색-후-2페이지-가면-에러가-났었다-한글-링크-문제.md
+++ b/_posts/2009-06-21-검색-후-2페이지-가면-에러가-났었다-한글-링크-문제.md
@@ -34,7 +34,7 @@ euc-kr은 나름대로 처음 방식을 활용해서 만든 한글 인코딩 방
 
 전세계의 모든 언어를 표현할 수 있도록 문자 인코딩 방식을 표준화한 것이 UTF방식이다. 8비트인 UTF-8 방식와 16비트인 UTF-16 방식으로 나뉜다고 하는데, 어떤 차이가 있는지는 모르겠다.
 
-자, 그럼, 우리는 이제 이런 걸 알 수 있게 된다. 레프트21 홈페이지는 UTF-8 방식으로 인코딩돼 있다. 익스플로러의 주소표시줄은 UTF-8 방식을 지원하지 않는다. 즉, 만약 UTF-8이 &#8216;박&#8217;이라는 의미로 5555을 주소 표시줄에 보냈다고 하자, 그러면 익스플로러는 이걸 &#8216;밼&#8217;으로 알아먹을 수도 있게 된다는 거다.
+자, 그럼, 우리는 이제 이런 걸 알 수 있게 된다. 레프트21 홈페이지는 UTF-8 방식으로 인코딩돼 있다. 익스플로러의 주소표시줄은 UTF-8 방식을 지원하지 않는다. 즉, 만약 UTF-8이 ‘박’이라는 의미로 5555을 주소 표시줄에 보냈다고 하자, 그러면 익스플로러는 이걸 ‘밼’으로 알아먹을 수도 있게 된다는 거다.
 
 ## 해결책은?
 
