--- a/_posts/2009-07-14-레프트21-홈페이지-인기-메뉴는.md
+++ b/_posts/2009-07-14-레프트21-홈페이지-인기-메뉴는.md
@@ -21,9 +21,9 @@ tags:
 ---
 레프트21에서 가장 인기가 좋은 메뉴는 무엇일까요?
 
-바로 &#8216;<a href="http://wspaper.org/6_all_issue.php" target="_blank" class="broken_link">집중이슈</a>&#8216;입니다. 사실, 레프트21 같은 격주간지가 발빠른 현장기사로 승부를 보는 것은 불가능한 일입니다. 한겨레21이 속보경쟁을 하지는 않는 것처럼 말이지요.
+바로 ‘<a href="http://wspaper.org/6_all_issue.php" target="_blank" class="broken_link">집중이슈</a>‘입니다. 사실, 레프트21 같은 격주간지가 발빠른 현장기사로 승부를 보는 것은 불가능한 일입니다. 한겨레21이 속보경쟁을 하지는 않는 것처럼 말이지요.
 
-그러나 레프트21은 이슈를 다루는 언론입니다. 그래서 생각해낸 것이 &#8216;<a href="http://wspaper.org/6_all_issue.php" target="_blank" class="broken_link">집중이슈</a>&#8216;인 것이죠. 이 <a href="http://wspaper.org/6_all_issue.php" target="_blank" class="broken_link">집중이슈 메뉴</a>를 활용하면, 해당 이슈와 관련된 기사들을 한꺼번에 모아 볼 수 있습니다.
+그러나 레프트21은 이슈를 다루는 언론입니다. 그래서 생각해낸 것이 ‘<a href="http://wspaper.org/6_all_issue.php" target="_blank" class="broken_link">집중이슈</a>‘인 것이죠. 이 <a href="http://wspaper.org/6_all_issue.php" target="_blank" class="broken_link">집중이슈 메뉴</a>를 활용하면, 해당 이슈와 관련된 기사들을 한꺼번에 모아 볼 수 있습니다.
 
 이게 의미하는 것은, 전후사정을 한꺼번에 알 수 있게 된다는 것이죠. 특히 레프트21은 분석 기사가 많은데, 전후맥락을 총망라해서 볼 수 있게 되는 것이죠.
 
