--- a/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
+++ b/_posts/2009-07-21-온라인기사-전체기사-출력기능-추가.md
@@ -55,7 +55,7 @@ tags:
   <p class="wp-caption-text">
     레프트21의 첫화면 오른쪽에 있는 메뉴죠
   </p>
-</div>간단합니다. 좌측 그림에 보이는 것처럼, 인덱스의 우측에 있는 &#8216;레프트21 맞춤 보기&#8217; 메뉴에 
+</div>간단합니다. 좌측 그림에 보이는 것처럼, 인덱스의 우측에 있는 ‘레프트21 맞춤 보기’ 메뉴에 
 
 <a target="_blank" href="http://wspaper.org/5_viewtext.php?option=online" class="broken_link">온라인 텍스트 모아보기</a>가 새로 생겼습니다. 거길 클릭해서 들어갑니다.
 
@@ -65,7 +65,7 @@ tags:
 
 캡션 : 글자크기 10포인트, 줄간격 160%, 글꼴은 바탕체로 맞췄습니다.
 
-자, 간단하게 알 수 있죠? 오른쪽에 &#8216;인쇄&#8217; 버튼이 보입니다. 이걸 누르면? 아래처럼 인쇄 페이지가 나옵니다.(<span style="text-decoration: line-through;">!!주의!! 페이지가 다 뜨기를 기다린 다음에 눌러야 합니다.</span> <span style="color: rgb(255, 0, 0);">페이지가 다 뜨고 나야 인쇄 버튼이 활성화 됩니다.</span>)
+자, 간단하게 알 수 있죠? 오른쪽에 ‘인쇄’ 버튼이 보입니다. 이걸 누르면? 아래처럼 인쇄 페이지가 나옵니다.(<span style="text-decoration: line-through;">!!주의!! 페이지가 다 뜨기를 기다린 다음에 눌러야 합니다.</span> <span style="color: rgb(255, 0, 0);">페이지가 다 뜨고 나야 인쇄 버튼이 활성화 됩니다.</span>)
 
 <div style="width: 570px" class="wp-caption aligncenter">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile6.uf.116304494D08471426B45E.jpg" width="560" height="317" alt="레프트21 온라인 텍스트 모아 보기 인쇄 페이지" />
@@ -75,7 +75,7 @@ tags:
   </p>
 </div>
 
-위쪽에 큰 글씨로 있는 &#8216;인쇄&#8217;를 누릅니다. 그러면 웹브라우저의 인쇄 기능이 작동합니다.(이 &#8216;인쇄&#8217; 글자는 프린트로 출력되지 않으니 안심하세요.)
+위쪽에 큰 글씨로 있는 ‘인쇄’를 누릅니다. 그러면 웹브라우저의 인쇄 기능이 작동합니다.(이 ‘인쇄’ 글자는 프린트로 출력되지 않으니 안심하세요.)
 
 혹시 웹브라우저로 크롬을 사용하시는 분들은 주의하세요. 크롬은 인쇄기능이 별로인 것 같더라고요. 여백이 너무 크게 나와요. (이건 제가 테스트했을 때 그랬던 것입니다. 다른 곳에서는 제대로 나올 수도 있으니, 실험 정신이 강한 분들은 실험해 보세요. ^^)
 
@@ -83,7 +83,7 @@ tags:
 
 ## 전체 기사 출력
 
-전체 기사는 &#8216;레프트21 맞춤 보기&#8217;에서 &#8216;<a target="_blank" href="http://wspaper.org/5_viewtext.php" class="broken_link">최신호 텍스트 보기</a>&#8216;를 눌러 들어간 후 인쇄를 누르면 됩니다. 온라인 텍스트 모아보기와 같은 위치에 버튼이 있으니 찾기 쉬울 거예요.
+전체 기사는 ‘레프트21 맞춤 보기’에서 ‘<a target="_blank" href="http://wspaper.org/5_viewtext.php" class="broken_link">최신호 텍스트 보기</a>‘를 눌러 들어간 후 인쇄를 누르면 됩니다. 온라인 텍스트 모아보기와 같은 위치에 버튼이 있으니 찾기 쉬울 거예요.
 
 그럼, 앞으로도 독자들의 편의를 위해 더욱 노력하는 웹마스터가 되도록 하겠습니다!
 
@@ -115,7 +115,7 @@ tags:
   </p>
   
   <p style="text-align: left;">
-    그리고 &#8216;인쇄&#8217;는 사실 submit 버튼입니다. 이 form의 action은 7_print_popup.php죠.
+    그리고 ‘인쇄’는 사실 submit 버튼입니다. 이 form의 action은 7_print_popup.php죠.
   </p>
   
   <p style="text-align: left;">
