--- a/_posts/2009-07-29-기사를-선택해서-인쇄하는-기능-추가.md
+++ b/_posts/2009-07-29-기사를-선택해서-인쇄하는-기능-추가.md
@@ -37,7 +37,7 @@ categories:
 
 자, 1번부터 봅시다. 쉬운 순으로요.
 
-저 X 버튼을 누르면 &#8216;더욱 최첨단화 되고 있는 대량 살상무기&#8217; 기사가 사라집니다. 물론, 인쇄에도 안 나오죠.
+저 X 버튼을 누르면 ‘더욱 최첨단화 되고 있는 대량 살상무기’ 기사가 사라집니다. 물론, 인쇄에도 안 나오죠.
 
 X 버튼은 모든 기사에 있습니다.
 
