--- a/_posts/2009-08-27-이-기사와-같은-주제의-기사-목록-추가.md
+++ b/_posts/2009-08-27-이-기사와-같은-주제의-기사-목록-추가.md
@@ -1,6 +1,6 @@
 ---
 id: 121
-title: '&#8216;이 기사와 같은 주제의 기사&#8217; 목록 추가'
+title: '‘이 기사와 같은 주제의 기사’ 목록 추가'
 date: 2009-08-27T07:46:37+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -11,7 +11,7 @@ tistory_id:
 categories:
   - 사이트 이용안내
 ---
-안녕하세요 ^^ 지난 번 독자편지 목록을 하단에 출력한 데 이어 이번에는 &#8216;이 기사와 같은 주제의 기사&#8217;를 기사보기 하단에 출력하는 시스템을 마련했습니다.
+안녕하세요 ^^ 지난 번 독자편지 목록을 하단에 출력한 데 이어 이번에는 ‘이 기사와 같은 주제의 기사’를 기사보기 하단에 출력하는 시스템을 마련했습니다.
 
 길게 이야기할 것 없이 그냥 그림을 보시면 이해하기 쉬우실 것 같습니다! ^^
 
