--- a/_posts/2009-09-07-관련기사의-출처-정보를-명확하게.md
+++ b/_posts/2009-09-07-관련기사의-출처-정보를-명확하게.md
@@ -25,13 +25,13 @@ tags:
 
 위에 보이는 그림은 금호타이어 <a href="http://wspaper.org/article/6931" target="_blank">대량 해고에 맞서 금호타이어 노동자들이 점거 파업을 시작하다</a>의 하단에 달려 있는 관련 기사들입니다.
 
-사실 저 관련기사들을 단 이유는 금호 타이어 노조가 그동안 얼마나 모범적으로 투쟁을 해왔는지 알려주고 싶은 마음에서였습니다. 제목을 보면 알 수 있겠지만, 금호타이어 노동자들은 상당히 여러 번 &#8220;갈 길을 보여주&#8221;었군요. ㅋ
+사실 저 관련기사들을 단 이유는 금호 타이어 노조가 그동안 얼마나 모범적으로 투쟁을 해왔는지 알려주고 싶은 마음에서였습니다. 제목을 보면 알 수 있겠지만, 금호타이어 노동자들은 상당히 여러 번 “갈 길을 보여주”었군요. ㅋ
 
 금호 타이어 노조는 비정규직 정규직화 투쟁의 모범사례로 소개된 적도 있는 노조입니다. 그만큼 노동자들의 단결이 강력한 노조였던 것이죠.
 
 그런데 관련기사 제목들을 보니 좀 헷갈리시죠. 금호타이어 노동자들이 갈길을 두 번 보여줬는데 말입니다&#8230; 언제 언제 보여 준 것인지 알 수가 없네요. ^^ 그래서 마우스를 갖다 대면 어떤 매체가 언제 다룬 기사인지를 알 수 있도록 했습니다. 위에 나와 있는 것처럼 말이죠.
 
-&#8220;금호타이어 활동가들에게 듣는다&#8221; 라는 기사는 격주간<다함께> 30호에 실렸던 기사네요. 2004년 5월 1일 발행된 것이고요.
+“금호타이어 활동가들에게 듣는다” 라는 기사는 격주간<다함께> 30호에 실렸던 기사네요. 2004년 5월 1일 발행된 것이고요.
 
 집중이슈나 기획연재, 같은 주제의 기사 등 하단에 출력되는 모든 관련 기사에 저런 식의 설명을 붙였습니다.(이번 호 독자편지목록에는 굳이 저런 팝업을 띄울 필요가 없으니 하지 않았습니다. 꼴라주 목록과 세상은 요지경 목록은 목록 자체에 날짜가 표기되기 때문에 따로 하지 않았고요.)
 
