--- a/_posts/2009-09-18-문맥-관련기사의-출처정보.md
+++ b/_posts/2009-09-18-문맥-관련기사의-출처정보.md
@@ -23,7 +23,7 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile23.uf.127CAB524D08471F4576A7.jpg" class="aligncenter" width="560" height="312" alt="레프트21 문맥 링크 출처 정보 예시" />
 
-위에 보시면 &#8216;민주노동당 등이 정권 퇴진까지 결의&#8217;라는 내용에 링크가 걸려 있죠. 그리고 자그만 팝업이 떴습니다. 팝업의 내용은 **&#8216;김문성 객원기자, 민주노동당의 이명박 퇴진 요구 결정을 지지하며, <레프트21>8호, 2009-06-20&#8217;** 이네요.
+위에 보시면 ‘민주노동당 등이 정권 퇴진까지 결의’라는 내용에 링크가 걸려 있죠. 그리고 자그만 팝업이 떴습니다. 팝업의 내용은 **‘김문성 객원기자, 민주노동당의 이명박 퇴진 요구 결정을 지지하며, <레프트21>8호, 2009-06-20’** 이네요.
 
 바로 저 기능입니다. 링크를 클릭하면 어떤 기사로 가게 되는지 알 수 있게 해 주는 기능인 것이죠.
 
