--- a/_posts/2009-10-12-후원페이지-인터페이스를-편리하게.md
+++ b/_posts/2009-10-12-후원페이지-인터페이스를-편리하게.md
@@ -65,7 +65,7 @@ categories:
 
 자자&#8230; 선택을 하면 아랫부분에 후원 정보를 입력하도록 설계를 해놨습니다. 문제는&#8230; 사람들이 아랫부분까지 스크롤을 하지 않은 채로 선택하는 경우였습니다. 그러면, 클릭해도 아무 변화가 없는 셈이 되는 것이죠!
 
-그래서 가끔 이런 말을 듣곤 했습니다. &#8220;클릭해도 가만히 있는데?&#8221; 그럼 제가 대답했죠. &#8220;아래로 내리세요.&#8221;
+그래서 가끔 이런 말을 듣곤 했습니다. “클릭해도 가만히 있는데?” 그럼 제가 대답했죠. “아래로 내리세요.”
 
 물론 대부분의 사람들이 금세 아래쪽으로 스크롤을 내려서 후원을 하셨을 겁니다. 하지만&#8230; 이런 식의 혼란을 주는 것을 웹마스터로서 용납해선 안 되겠죠! 그래서 오늘 과감하게 고쳤습니다.
 
@@ -97,7 +97,7 @@ categories:
 
 ## 소스
 
-jQuery를 연결한, 아래 소스를 사용했습니다. hide()가 아니라 css(&#8216;display&#8217;,&#8217;none&#8217;)를 사용한 이유는, hide()로 하니 익스6에서 원가 문제가 생기는 듯해서였습니다. 물론 다시 하면 그런 오류가 없을지도 모릅니다.
+jQuery를 연결한, 아래 소스를 사용했습니다. hide()가 아니라 css(‘display’,’none’)를 사용한 이유는, hide()로 하니 익스6에서 원가 문제가 생기는 듯해서였습니다. 물론 다시 하면 그런 오류가 없을지도 모릅니다.
 
 <pre title="code" class="brush: jscript;">&lt;script type="text/javascript" src="jquery.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
