--- a/_posts/2009-10-14-구글-아날리틱스-검색-유입을-분명히-감지하기.md
+++ b/_posts/2009-10-14-구글-아날리틱스-검색-유입을-분명히-감지하기.md
@@ -23,7 +23,7 @@ tags:
 
 워낙 도움되는 기능이 많아서 일일이 설명하기 힘들고&#8230; ㅋ
 
-어쨌든, 직관적으로 가장 도움이 되는 부분은, 지금 우리 홈페이지 방문자들이 어떤 경로로 들어오는지 알려 주는 &#8216;트래픽 소스 개요&#8217;와 &#8216;트래픽 소스&#8217;의 &#8216;검색 엔진&#8217; 부분이다.
+어쨌든, 직관적으로 가장 도움이 되는 부분은, 지금 우리 홈페이지 방문자들이 어떤 경로로 들어오는지 알려 주는 ‘트래픽 소스 개요’와 ‘트래픽 소스’의 ‘검색 엔진’ 부분이다.
 
 ## 검색 유입
 
@@ -43,7 +43,7 @@ tags:
 
 그런데 구글 아날리틱스에서 검색 유입을 확실히 알기 위해 한 가지 작업이 필요했다.
 
-구글 아날리틱스가 자동으로 모든 검색엔진의 트래픽을 &#8216;검색 엔진&#8217; 파트로 분류해 주지 않는다는 사실을 알게 된 것이다.
+구글 아날리틱스가 자동으로 모든 검색엔진의 트래픽을 ‘검색 엔진’ 파트로 분류해 주지 않는다는 사실을 알게 된 것이다.
 
 그래서 구글 아날리틱스의 소스를 다음처럼 변경했다. 이렇게 변경을 해 줘야 검색 유입이 정확히 얼마나 되는지 분명히 분석할 수 있게 된다.(이 소스로 변경하기 전의 검색 유입량은 고급 세그먼트를 사용해서 해결하긴 했다.)
 
