--- a/_posts/2009-10-21-검색창에-커서를-기본으로-놓기.md
+++ b/_posts/2009-10-21-검색창에-커서를-기본으로-놓기.md
@@ -19,9 +19,9 @@ tags:
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile30.uf.192A1C474D0847230294A0.jpg" class="aligncenter" width="300" height="337" alt="사용자 삽입 이미지" filename="091010-0009.jpg" filemime="image/jpeg" style="margin-left:10px;" />
 </p>
 
-이 글에서 소개한 결정은, <a href="http://work.local/webmaster/entry/%EA%B2%80%EC%83%89%EC%B0%BD%EC%9D%84-%EC%BB%A4%EC%84%9C%EC%97%90-%EA%B8%B0%EB%B3%B8%EC%9C%BC%EB%A1%9C-%EB%86%93%EC%A7%80-%EC%95%8A%EA%B8%B0" target="_blank" class="tx-link">&#8220;검색창에 커서를 기본으로 놓지 않기&#8221;</a>라는 글을 통해 정정했습니다. 반드시 같이 보세요.
+이 글에서 소개한 결정은, <a href="http://work.local/webmaster/entry/%EA%B2%80%EC%83%89%EC%B0%BD%EC%9D%84-%EC%BB%A4%EC%84%9C%EC%97%90-%EA%B8%B0%EB%B3%B8%EC%9C%BC%EB%A1%9C-%EB%86%93%EC%A7%80-%EC%95%8A%EA%B8%B0" target="_blank" class="tx-link">“검색창에 커서를 기본으로 놓지 않기”</a>라는 글을 통해 정정했습니다. 반드시 같이 보세요.
 
-&#8212;&#8212;
+——
 
 레프트21 웹마스터는 기술도 중요하지만, 기획을 꼼꼼히 생각해야 합니다. 그래서 웹기획에 관한 책을 많이 읽고 있어요. 물론 기술서적도 많이 봅니다만.
 
