--- a/_posts/2009-10-30-검색창을-커서에-기본으로-놓지-않기.md
+++ b/_posts/2009-10-30-검색창을-커서에-기본으로-놓지-않기.md
@@ -15,7 +15,7 @@ tags:
   - 커서
   - 포커스
 ---
-지난 번에 글을 썼습니다. &#8216;<a target="_blank" href="http://work.local/webmaster/webmaster/45" class="broken_link">검색창에 커서를 기본으로 놓기</a>&#8216;라는 글이었는데요, 검색창에 커서를 기본으로 놓으면 조금이라도 편하겠다는 생각해 실행해 본 것입니다. 지난 번 글을 인용해 보죠.
+지난 번에 글을 썼습니다. ‘<a target="_blank" href="http://work.local/webmaster/webmaster/45" class="broken_link">검색창에 커서를 기본으로 놓기</a>‘라는 글이었는데요, 검색창에 커서를 기본으로 놓으면 조금이라도 편하겠다는 생각해 실행해 본 것입니다. 지난 번 글을 인용해 보죠.
 
 > 레프트21에서 뭔가 입력하는 곳은, 메일링 리스트를 받는 곳, 정기구독과 후원. 여기밖에 없습니다. 가장 많이 사용하는 입력은 바로 검색이죠.
 > 
@@ -25,9 +25,9 @@ tags:
 
 ## 그러나 문제가 있었습니다.
 
-&#8216;안토니오&#8217;님이 댓글로 지적도 해 주셨지만, 제가 경험한 문제도 있었습니다.
+‘안토니오’님이 댓글로 지적도 해 주셨지만, 제가 경험한 문제도 있었습니다.
 
-우선 <a target="_blank" href="http://work.local/webmaster/webmaster/45#comment78" class="broken_link">&#8216;안토니오&#8217;님의 댓글</a>을 보시죠. 좀 길어도 모두 인용하겠습니다.
+우선 <a target="_blank" href="http://work.local/webmaster/webmaster/45#comment78" class="broken_link">‘안토니오’님의 댓글</a>을 보시죠. 좀 길어도 모두 인용하겠습니다.
 
 > 국내 웹개발자나 기획자가 쓴 것들 중에는 문제 투성이 기획서들도 많은데요&#8230;. 가려 보셔야 할듯&#8230;
 > 
@@ -41,8 +41,8 @@ tags:
 
 기사를 보러 들어가서 스크롤을 내리고 있는데, 검색창에 커서가 가면서 화면이 다시 맨 위로 쭉 당겨지는 것이었죠. 읽다가 짜증이 났더랬습니다.
 
-그리고 생각했죠. &#8216;기사 읽기를 방해하는 놈은 남겨두지 말자!&#8217;
+그리고 생각했죠. ‘기사 읽기를 방해하는 놈은 남겨두지 말자!’
 
-그래서 8일 만에 &#8216;검색창을 커서에 기본으로 놓기&#8217; 정책을 철회했습니다.
+그래서 8일 만에 ‘검색창을 커서에 기본으로 놓기’ 정책을 철회했습니다.
 
 그럼&#8230; ^^ 앞으로도 사용자들을 먼저 생각하는 웹마스터가 되도록 노력하겠습니다!!! ^^
