--- a/_posts/2009-11-09-지난-호-보기에서-online-표시-달았고-온라인만-골라-볼-수.md
+++ b/_posts/2009-11-09-지난-호-보기에서-online-표시-달았고-온라인만-골라-볼-수.md
@@ -44,7 +44,7 @@ tags:
 
 독자들에게 꼭 필요할지 확신은 안 갑니다만, 그래도 유용할 거라고 생각해서 만든 기능이 있습니다.
 
-아래 그림에서 빨간 표시한 것을 보세요. 온라인만 보기, 오프라인만 보기, 다 보기 &#8211; 세 가지 버튼을 추가했습니다.
+아래 그림에서 빨간 표시한 것을 보세요. 온라인만 보기, 오프라인만 보기, 다 보기 - 세 가지 버튼을 추가했습니다.
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile1.uf.192222474D084725296243.png" class="aligncenter" width="560" height="277" alt="온라인만 보기, 오프라인만 보기, 다 보기 버튼" />
 
