--- a/_posts/2009-11-10-경축-레프트21-웹마스터-블로그-1만-히트.md
+++ b/_posts/2009-11-10-경축-레프트21-웹마스터-블로그-1만-히트.md
@@ -50,13 +50,13 @@ tags:
   
 
 
-&#8216;사용자들이 홈페이지의 기능을 좀 낱낱이 알고 사용했으면 좋겠다.&#8217;
+‘사용자들이 홈페이지의 기능을 좀 낱낱이 알고 사용했으면 좋겠다.’
 
 
   
 
 
-&#8216;꼭 <레프트21> 홈페이지가 아니더라도 우리 독자들이 웹과 웹브라우저의 다양한 기능을 잘 활용할 수 있게 된다면 좋겠다&#8217;
+‘꼭 <레프트21> 홈페이지가 아니더라도 우리 독자들이 웹과 웹브라우저의 다양한 기능을 잘 활용할 수 있게 된다면 좋겠다’
 
 
   
@@ -206,7 +206,7 @@ tags:
   
 
 
-<레프트21>은 언론사로 등록돼있기는 하지만 &#8216;비영리&#8217;나 다름없이 운영되고 있습니다.
+<레프트21>은 언론사로 등록돼있기는 하지만 ‘비영리’나 다름없이 운영되고 있습니다.
 
 
   
