--- a/_posts/2009-11-10-지난-호-보기-버튼으로-강조.md
+++ b/_posts/2009-11-10-지난-호-보기-버튼으로-강조.md
@@ -13,7 +13,7 @@ categories:
 ---
 레프트21 맞춤 보기에서 지난 호 보기를 좀더 강조했습니다.
 
-정확히 말하면, 지난 호와 제휴자료를 동시에 볼 수 있는 메뉴인데, 메뉴명을 길게 달 수가 없어서 궁여지책으로 &#8216;지난 호 보기&#8217;라고만 했습니다.
+정확히 말하면, 지난 호와 제휴자료를 동시에 볼 수 있는 메뉴인데, 메뉴명을 길게 달 수가 없어서 궁여지책으로 ‘지난 호 보기’라고만 했습니다.
 
 그래도 나름대로 직관적인 이름이라고 생각합니다.
 
@@ -21,13 +21,13 @@ categories:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile25.uf.1407F0564D08472A1FF7E1.jpg" class="aligncenter" width="283" height="271" alt="지난 호 보기 버튼" />
 
-신문 표지 바로 아래 &#8216;지난 호 보기&#8217; 버튼을 넣었기 때문에 사람들이 못 찾을 일은 없을 것입니다.
+신문 표지 바로 아래 ‘지난 호 보기’ 버튼을 넣었기 때문에 사람들이 못 찾을 일은 없을 것입니다.
 
 ### 지난 호 보기를 강조한 이유
 
 이렇게 지난 호 보기를 강조한 이유가 있습니다.
 
-얼마 전 <레프트21> 애독자 한 분을 만났습니다. 그래서 최근 제가 붙인 기능을 소개해 줬죠. <a target="_blank" href="http://work.local/webmaster/webmaster/48" class="broken_link">&#8216;지난 호 보기에서 online 표시 달았고, 온라인만 골라 볼 수 있게 했음</a>&#8216;에서 소개한 기능을 알려준 것이죠.
+얼마 전 <레프트21> 애독자 한 분을 만났습니다. 그래서 최근 제가 붙인 기능을 소개해 줬죠. <a target="_blank" href="http://work.local/webmaster/webmaster/48" class="broken_link">‘지난 호 보기에서 online 표시 달았고, 온라인만 골라 볼 수 있게 했음</a>‘에서 소개한 기능을 알려준 것이죠.
 
 그런데, 제가 새로 단 기능 자체보다도 지난 호 보기로 신문 표지들이 주욱 나오는 것에 더욱 놀라는 것이었습니다.
 
@@ -45,9 +45,9 @@ categories:
 
 지난 호를 찾아 보는 것은 <레프트21> 독자들이 자주 하는 행위인 만큼, 지난 호 보기가 더 잘 보이도록 만들어야 겠다는 생각을 하게 됐습니다.
 
-그래서 이렇게 &#8216;지난 호 보기&#8217;를 강조한 것이죠. 사실 메뉴 목록에 있는 &#8216;지난 호/제휴자료 보기&#8217;와 정확히 겹치는데, 이건 어떻게 처리할지 고민 중입니다.
+그래서 이렇게 ‘지난 호 보기’를 강조한 것이죠. 사실 메뉴 목록에 있는 ‘지난 호/제휴자료 보기’와 정확히 겹치는데, 이건 어떻게 처리할지 고민 중입니다.
 
-이 메뉴명은 &#8216;제휴자료 보기&#8217;라는 이름이 들어가 있어서 메뉴의 성격을 더 정확히 말해 주거든요.
+이 메뉴명은 ‘제휴자료 보기’라는 이름이 들어가 있어서 메뉴의 성격을 더 정확히 말해 주거든요.
 
 ### 모서리가 둥근 디자인
 
