--- a/_posts/2009-11-28-익스플로러에서-파비콘이-나오도록-했음.md
+++ b/_posts/2009-11-28-익스플로러에서-파비콘이-나오도록-했음.md
@@ -27,9 +27,9 @@ tags:
 
 원래는 ‘익스플로러가 후져서 그렇지 뭐’ 하고 생각했습니다.
 
-그러나 얼마 전 방명록에 한 독자분이 &#8220;레프트21도 예쁜 파비콘이 있었으면 좋겠어요&#8221; 하고 글을 남겨 주셨습니다.
+그러나 얼마 전 방명록에 한 독자분이 “레프트21도 예쁜 파비콘이 있었으면 좋겠어요” 하고 글을 남겨 주셨습니다.
 
-저는 &#8220;이미 파비콘이 있는데요&#8221; 하고 댓글을 달았지만, 오늘 아차 했습니다. 왜냐면, 익스플로러에서는 파비콘이 나오지 않기 때문입니다.
+저는 “이미 파비콘이 있는데요” 하고 댓글을 달았지만, 오늘 아차 했습니다. 왜냐면, 익스플로러에서는 파비콘이 나오지 않기 때문입니다.
 
 제가 어느새 파이어폭스와 크롬을 즐겨 쓰는 제 기준으로 사고하기 시작했나 하는 생각이 들어서 잠시 머리를 쳤습니다.
 
@@ -37,4 +37,4 @@ tags:
 
 어쨌든, 위 그림에서 보이는 것처럼 이제는 익스플로러에서도 파비콘이 제대로 나옵니다.
 
-기술적인 내용이 궁금하신 분은 제 개인 블로그에 쓴 글인 <a href="http://mytory.co.kr/archives/100" target="_blank" class="tx-link">&#8216;익스플로러에서 파비콘 나오게 하기(파폭에선 나오는데 익스에선 안나올 경우)&#8217;</a>를 참고하세요.
+기술적인 내용이 궁금하신 분은 제 개인 블로그에 쓴 글인 <a href="http://mytory.co.kr/archives/100" target="_blank" class="tx-link">‘익스플로러에서 파비콘 나오게 하기(파폭에선 나오는데 익스에선 안나올 경우)’</a>를 참고하세요.
