--- a/_posts/2009-12-08-칼럼기획연재집중이슈-모아서-뽑기.md
+++ b/_posts/2009-12-08-칼럼기획연재집중이슈-모아서-뽑기.md
@@ -26,7 +26,7 @@ tags:
 
 그래서 며칠 전에 만들었습니다. 눈치가 빠른 분들은 이미 사용하셨을 텐데요.
 
-집중이슈나 기획연재, 칼럼란에 들어가면 &#8216;모아서 인쇄&#8217;라는 버튼이 생긴 것을 확인할 수 있을 겁니다.
+집중이슈나 기획연재, 칼럼란에 들어가면 ‘모아서 인쇄’라는 버튼이 생긴 것을 확인할 수 있을 겁니다.
 
 <div style="width: 590px" class="wp-caption aligncenter">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile3.uf.205F124B4D0847330D4B30.png" width="580" height="147" alt="" />
@@ -58,7 +58,7 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile9.uf.162337474D0847332D9904.jpg" class="aligncenter" width="580" height="334" alt="" />
 
-위에 보시면 알겠지만, &#8216;인쇄 세부 조정을 눌러 인쇄할 기사를 선택하세요.&#8217;라는 안내가 있죠?
+위에 보시면 알겠지만, ‘인쇄 세부 조정을 눌러 인쇄할 기사를 선택하세요.’라는 안내가 있죠?
 
 인쇄 세부조정 버튼을 한 번 눌러 보세요. 그러면 인쇄할 기사 목록이 뜹니다.
 
@@ -70,4 +70,4 @@ tags:
 
 한 번 해 보시는게 가장 도움이 될 테니, 연습할 수 있는 페이지로 링크 걸겠습니다.
 
-<a href="http://wspaper.org/6_issue.php?issue_no=57" target="_blank">집중이슈 &#8211; 한상률 게이트</a>
+<a href="http://wspaper.org/6_issue.php?issue_no=57" target="_blank">집중이슈 - 한상률 게이트</a>
