--- a/_posts/2009-12-14-인쇄할-때-스타일을-마음대로-고르자.md
+++ b/_posts/2009-12-14-인쇄할-때-스타일을-마음대로-고르자.md
@@ -35,7 +35,7 @@ tags:
 
 예컨대, 글씨 크기 부분에 커서를 놓고, 위아래 방향키를 누르면 글씨 크기가 변하면서 실시간으로 확인을 할 수 있습니다. 나머지도 마찬가지예요.
 
-그리고 숫자키로 입력을 한다고 합시다. 입력 후 엔터를 치면 &#8216;적용&#8217; 버튼을 누른 것과 같은 효과가 납니다.
+그리고 숫자키로 입력을 한다고 합시다. 입력 후 엔터를 치면 ‘적용’ 버튼을 누른 것과 같은 효과가 납니다.
 
 <div style="width: 590px" class="wp-caption aligncenter">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile8.uf.121EA4504D08473423F3BD.jpg" alt="인쇄 스타일, 글자 크기 조절" width="580" height="221" />
@@ -53,7 +53,7 @@ tags:
 
 바탕, 굴림, 돋움, <a href="http://kldp.net/projects/unfonts/download/note/2607" target="_blank">은 바탕, 은 돋움,</a> <a href="http://kldp.net/projects/unfonts/download/4696?filename=un-fonts-extra-1.0.2-080608.tar.gz" target="_blank">은 신문,</a> 맑은 고딕, <a href="http://hangeul.naver.com/share.nhn" target="_blank">나눔명조, 나눔고딕</a>, <a href="http://notice.hani.co.kr/view.html?no=56" target="_blank" class="broken_link">한겨레결체</a> 총 10가지 글꼴을 사용할 수 있도록 해 뒀는데요, 만약에 요청이 있다면 다른 글꼴도 추가할 수 있습니다.(이 중 바탕, 굴림, 돋움, 맑은 고딕은 윈도우를 구입해야만 사용할 수 있는 유료 글꼴이고 나머지는 무료 글꼴입니다.)
 
-글꼴을 고른 기준은 간단합니다. 시스템 기본글꼴(바탕, 굴림, 돋움, 은 바탕, 은 돋움, 은 신문, 맑은 고딕 &#8211; 은 글꼴은 우분투 리눅스의 기본 설치 글꼴입니다.)에 개인적으로 인쇄해서 보기 편한 글꼴(나눔명조, 나눔고딕, 한겨레결체)을 추가했습니다.
+글꼴을 고른 기준은 간단합니다. 시스템 기본글꼴(바탕, 굴림, 돋움, 은 바탕, 은 돋움, 은 신문, 맑은 고딕 - 은 글꼴은 우분투 리눅스의 기본 설치 글꼴입니다.)에 개인적으로 인쇄해서 보기 편한 글꼴(나눔명조, 나눔고딕, 한겨레결체)을 추가했습니다.
 
 위 10가지 글꼴 중 독자분들의 컴퓨터에 설치돼있지 않은 글꼴은 선택 항목에 나오지 않습니다. 설치돼 있지 않은 글꼴 때문에 헷갈릴 염려는 없다는 거죠. (기술적인 게 궁금한 분들은 제 개인 개발 블로그에 있는 <a href="http://mytory.textcube.com/entry/%ED%8F%B0%ED%8A%B8%EA%B0%80-%EC%84%A4%EC%B9%98%EB%8F%BC-%EC%9E%88%EB%8A%94%EC%A7%80-%ED%99%95%EC%9D%B8%ED%95%B4-%EC%A3%BC%EB%8A%94-javascript" target="_blank">폰트가 설치돼 있는지 확인해 주는 자바스크립트</a>를 보시면 됩니다.)
 
