--- a/_posts/2009-12-20-목록-클릭시-새-창-띄우기-전체-기사와-기본검색에-사.md
+++ b/_posts/2009-12-20-목록-클릭시-새-창-띄우기-전체-기사와-기본검색에-사.md
@@ -24,11 +24,11 @@ tags:
 
 전체 기사 목록, 섹션 목록, 주제 목록, 칼럼 목록, 집중이슈 목록, 기획연재 목록, 검색 결과 목록&#8230; 많은 목록이 있습니다. 이런 목록들에서 클릭을 했을 때 사용자들은 어떤 화면을 원할까요?
 
-예전에 <a target="_blank" href="http://wspaper.org/3_search.php?keyword=%EC%A1%B0%EB%AA%85%ED%9B%88" class="broken_link">조명훈 기자</a> 의견은 이랬습니다. 검색을 해서 목록을 띄웠는데, 기사를 클릭했을 때 새 창으로 띄우는 게 더 좋다는 것입니다. 지금 창에서 클릭한 기사로 넘어가면 별로라는 거죠. 클릭한 기사가 원하는 기사가 아닐 수도 있기 때문입니다. 원하는 기사가 아니면 &#8216;뒤로 가기&#8217;를 눌러서 다시 검색 결과 목록으로 돌아가야 하니까요. 그럼 시간이 걸리죠. 썩 유쾌한 기분은 아닐 겁니다. 생각해 보니 저도 그런 적이 많았습니다.
+예전에 <a target="_blank" href="http://wspaper.org/3_search.php?keyword=%EC%A1%B0%EB%AA%85%ED%9B%88" class="broken_link">조명훈 기자</a> 의견은 이랬습니다. 검색을 해서 목록을 띄웠는데, 기사를 클릭했을 때 새 창으로 띄우는 게 더 좋다는 것입니다. 지금 창에서 클릭한 기사로 넘어가면 별로라는 거죠. 클릭한 기사가 원하는 기사가 아닐 수도 있기 때문입니다. 원하는 기사가 아니면 ‘뒤로 가기’를 눌러서 다시 검색 결과 목록으로 돌아가야 하니까요. 그럼 시간이 걸리죠. 썩 유쾌한 기분은 아닐 겁니다. 생각해 보니 저도 그런 적이 많았습니다.
 
 그런데 지금까지 고치지 않은 이유는 과연 정말 그럴까 하는 고민 때문이었습니다. 지금껏 내내 고민한 건 아니겠죠. 띄엄띄엄 고민을 해봤습니다.
 
-당시 조명훈 기자는 처음에는 &#8216;새 창 띄우기&#8217; 버튼을 만들어 달라고 했다가, 기본을 새 창 띄우기로 하고 &#8216;현재 창&#8217; 버튼을 만드는 게 낫겠다고 말했습니다. 저는 고민 끝에, 그냥 무조건 새 창으로 띄우도록 하기로 결정했습니다. 어차피 현재 창 버튼을 만드는 게 큰 의미가 없다고 생각했기 때문입니다. 클릭해서 새 창으로 띄우면 어차피 원하는 기사가 나옵니다. 한 번에 원하는 기사가 나왔다면 보고 닫으면 그만이겠지요. 굳이 버튼을 하나 더 만들어서 사용자들을 헷갈리게 만들 필요는 없다고 생각했습니다.
+당시 조명훈 기자는 처음에는 ‘새 창 띄우기’ 버튼을 만들어 달라고 했다가, 기본을 새 창 띄우기로 하고 ‘현재 창’ 버튼을 만드는 게 낫겠다고 말했습니다. 저는 고민 끝에, 그냥 무조건 새 창으로 띄우도록 하기로 결정했습니다. 어차피 현재 창 버튼을 만드는 게 큰 의미가 없다고 생각했기 때문입니다. 클릭해서 새 창으로 띄우면 어차피 원하는 기사가 나옵니다. 한 번에 원하는 기사가 나왔다면 보고 닫으면 그만이겠지요. 굳이 버튼을 하나 더 만들어서 사용자들을 헷갈리게 만들 필요는 없다고 생각했습니다.
 
 ## 목록에 사진 썸네일 추가
 
@@ -50,9 +50,9 @@ tags:
 
 구글 검색에서는 사진 썸네일을 기본으로 제공하지 않는 것 같습니다. 구글 검색은 여러 형태로 제공되는데요, <레프트21>의 구글 검색뿐 아니라 그냥 구글 검색에서도 사진 썸네일을 기본으로 제공하지는 않습니다. 다만, 검색도구를 열어서 이미지 미리 보기를 선택하면 사진 썸네일을 볼 수 있죠.
 
-구글 검색으로 <레프트21> 사진 썸네일을 보려면 좀 골치가 아픕니다. 예전에 &#8216;<a href="http://work.local/webmaster/entry/google-advanced-search" target="_blank">더 효과적으로 검색 기능을 활용하자!</a>&#8216;라는 글을 쓴 적이 있죠? 그걸 참고하시면 되는데요. 구글 검색을 할 때 검색창에 아래처럼 써 주면 됩니다.(&#8216;검색어&#8217; 대신 원하는 검색어를 넣고 검색 버튼 누르시면 실제로 구글 검색 결과 페이지로 갑니다.)
+구글 검색으로 <레프트21> 사진 썸네일을 보려면 좀 골치가 아픕니다. 예전에 ‘<a href="http://work.local/webmaster/entry/google-advanced-search" target="_blank">더 효과적으로 검색 기능을 활용하자!</a>‘라는 글을 쓴 적이 있죠? 그걸 참고하시면 되는데요. 구글 검색을 할 때 검색창에 아래처럼 써 주면 됩니다.(‘검색어’ 대신 원하는 검색어를 넣고 검색 버튼 누르시면 실제로 구글 검색 결과 페이지로 갑니다.)
 
-위에서 검색 버튼 눌렀을 때 나오는 페이지에서 &#8216;검색도구 열기&#8230;&#8217;를 클릭하고, &#8216;이미지 미리보기&#8217;를 누르면 기사에 포함된 사진들을 볼 수 있습니다. 아래 그림을 참고하세요.
+위에서 검색 버튼 눌렀을 때 나오는 페이지에서 ‘검색도구 열기&#8230;’를 클릭하고, ‘이미지 미리보기’를 누르면 기사에 포함된 사진들을 볼 수 있습니다. 아래 그림을 참고하세요.
 
 <div style="width: 520px" class="wp-caption aligncenter">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile26.uf.1719574D4D08473A36B81F.png" width="510" height="249" alt="" />
@@ -91,6 +91,6 @@ tags:
 
 사실 기자들은 자신이 <레프트21>의 열혈 독자기도 합니다. 사이트의 훌륭한 사용자인 것이죠. 만약 이 분들이 적극적으로 자신이 불편한 점을 저에게 말해 주지 않았다면 (비록 작은 개선이지만) 오늘 개선은 더 늦춰졌을지도 모르겠습니다. 기사 목록에서 새 창으로 기사를 띄우는 것은 영영 안 됐을 지도 모르는 일입니다. 그런 점에서 독자 분들이 아이디어나 불편한 점을 말해 주는 것은 굉장히 도움이 됩니다.
 
-혹시 이 글을 읽는 지금, 저에게 할 말이 있으시다면 1분만 시간을 내서 &#8216;<a target="_blank" href="http://work.local/webmaster/entry/report-and-proposal">홈페이지 오류신고, 개선사항 제안</a>&#8216; 페이지에 댓글을 남겨 주세요. 많은 도움이 된답니다.
+혹시 이 글을 읽는 지금, 저에게 할 말이 있으시다면 1분만 시간을 내서 ‘<a target="_blank" href="http://work.local/webmaster/entry/report-and-proposal">홈페이지 오류신고, 개선사항 제안</a>‘ 페이지에 댓글을 남겨 주세요. 많은 도움이 된답니다.
 
 그럼, 앞으로도 열심히 노력하는 웹마스터가 되도록 하겠습니다. ^^
