--- a/_posts/2010-01-18-레프트21-기사를-퍼가실-때-이렇게-해-주세요.md
+++ b/_posts/2010-01-18-레프트21-기사를-퍼가실-때-이렇게-해-주세요.md
@@ -40,7 +40,7 @@ tags:
 
 짜잔~ ^^ 레프트21로 연결되는 링크가 생겨나게 됩니다.
 
-아울러 레프트21이 택하고 있는 &#8216;<a href="javascript:void(window.open('http://wspaper.org/include/license.html','new_win','resizable=no,width=372px,height=574px,scrollbars=yes'))" target="_self">정보공유 라이선스 2.0:영리금지</a>&#8216;라는 저작권 정책도 함께 붙게 됩니다.
+아울러 레프트21이 택하고 있는 ‘<a href="javascript:void(window.open('http://wspaper.org/include/license.html','new_win','resizable=no,width=372px,height=574px,scrollbars=yes'))" target="_self">정보공유 라이선스 2.0:영리금지</a>‘라는 저작권 정책도 함께 붙게 됩니다.
 
 댓글로 문의가 있었는데, 저작권 정책 때문에 불안감이 많으신 것 같아서 필요한 조치를 했고, 위 상태대로 퍼가시면 레프트21의 저작권 정책에 완전히 부합하게 되므로 안심하셔도 됩니다.(당연히 영리목적 등 불건전한 목적으로 퍼가는 건 안되겠죠. ^^)
 
