--- a/_posts/2010-02-25-블로그에-레프트21-오픈캐스트를-달아-보자.md
+++ b/_posts/2010-02-25-블로그에-레프트21-오픈캐스트를-달아-보자.md
@@ -14,7 +14,7 @@ tags:
   - 노동자 연대
   - 오픈캐스트
 ---
-얼마 전에 &#8216;<a href="http://work.local/webmaster/55" target="_blank" class="broken_link">계륵, 레프트21 오픈캐스트</a>&#8216;라는 글을 쓴 적이 있는데 기억하시나 모르겠습니다.^^
+얼마 전에 ‘<a href="http://work.local/webmaster/55" target="_blank" class="broken_link">계륵, 레프트21 오픈캐스트</a>‘라는 글을 쓴 적이 있는데 기억하시나 모르겠습니다.^^
 
 어쨌든, 네이버에 <a target="_blank" href="http://opencast.naver.com/LE759">레프트21 오픈캐스트</a>를 계속 발행하는 입장에서는 다양하게 활용할 방법을 고민하고 있습니다.
 
@@ -38,19 +38,19 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile23.uf.1660964A4D0847462DA6F4.png" class="aligncenter" width="580" height="346" alt="" />그 줄의 바로 아래쪽에다가 아래 코드를 써 넣습니다.
 
-<!&#8211;레프트21 오픈캐스트&#8211;>  
-<div style=&#8221;text-align:center&#8221;>  
-<iframe title=&#8221;레프트21 오픈캐스트&#8221;
+<!-레프트21 오픈캐스트->  
+<div style=”text-align:center”>  
+<iframe title=”레프트21 오픈캐스트”
   
-style=&#8221;margin: 0px auto;&#8221; name=&#8221;opencastframe&#8221; id=&#8221;opencastframe&#8221;
+style=”margin: 0px auto;” name=”opencastframe” id=”opencastframe”
   
-src=&#8221;http://widget.webtools.kr/opencast\_em.php?id=LE759&index=&is\_footer=1&is_feed=0&feed=&#8221;
+src=”http://widget.webtools.kr/opencast\_em.php?id=LE759&index=&is\_footer=1&is_feed=0&feed=”
   
-width=&#8221;475&#8243; height=&#8221;336&#8243; border=&#8221;0&#8243; frameborder=&#8221;0&#8243; scrolling=&#8221;no&#8221;
+width=”475&#8243; height=”336&#8243; border=”0&#8243; frameborder=”0&#8243; scrolling=”no”
   
-marginheight=&#8221;0&#8243; marginwidth=&#8221;0&#8243;
+marginheight=”0&#8243; marginwidth=”0&#8243;
   
-allowtransparency=&#8221;true&#8221;></iframe>  
+allowtransparency=”true”></iframe>  
 </div>
 
 그리고 저장하면 끝!
