--- a/_posts/2010-04-11-레프트21-기후정의-토론회-생중계.md
+++ b/_posts/2010-04-11-레프트21-기후정의-토론회-생중계.md
@@ -16,7 +16,7 @@ tags:
   - 신기술
   - 트위터 생중계
 ---
-어제는 &#8216;<a href="http://wspaper.org/article/7922" target="_blank">기후정의 운동의 쟁점과 전망</a>&#8216;이라는 제목으로 토론회가 있었죠. ^^ 
+어제는 ‘<a href="http://wspaper.org/article/7922" target="_blank">기후정의 운동의 쟁점과 전망</a>‘이라는 제목으로 토론회가 있었죠. ^^ 
 
 그리고 제가 담당해서 트위터 생중계를 했습니다. 
 
@@ -28,13 +28,13 @@ tags:
 
 흐음&#8230; 그러다가 저는 또 솟구치는 호기심을 참지 못하고 이야기에 끼어들어 농담 반 진담 반으로 한 마디 던진 것이었죠. 
 
-&#8220;뭐, 트위터로 생중계나 할까요?&#8221; 
+“뭐, 트위터로 생중계나 할까요?” 
 
-그랬더니, 웹에 관심이 매우 많으신 우리 편집인님, &#8220;어, 그거 좋은데? 월요일까지 기획안 주세요.&#8221; 
+그랬더니, 웹에 관심이 매우 많으신 우리 편집인님, “어, 그거 좋은데? 월요일까지 기획안 주세요.” 
 
 **<font size="6">헐~ ㅇ_ㅇ;;</font>** 
 
-이렇게 해서 <레프트21>의 토론회, &#8216;기후정의 운동의 쟁점과 전망&#8217;을 트위터로 생중계하게 된 것이었습니다. 
+이렇게 해서 <레프트21>의 토론회, ‘기후정의 운동의 쟁점과 전망’을 트위터로 생중계하게 된 것이었습니다. 
 
 어떻게 생중계를 할 수 있는지 알아보는 건 다소 어려웠어요. ㅋㅋ 
 
@@ -61,15 +61,15 @@ tags:
 
 그 다음 문제는 그래서 화질이 됐습니다. 
 
-몇몇 분들은 화질이 너무 안 좋다, 이게 볼 만한 가치가 있겠냐, 사람들이 보겠냐 하는 의문을 제기하셨어요. 타당한 제기였다고 생각해요. 하지만, 시험적으로 해 볼만하다 생각으로 인식 씨와 제가 의기투합(!)해서 생중계는 한 번 꼭 해 보기로 했죠. &#8216;시험적&#8217;이라는 말에, 의문을 제기하던 분들도 선선히 &#8216;해 보라&#8217;는 입장을 말해 주셨죠 ㅋㅋ 
+몇몇 분들은 화질이 너무 안 좋다, 이게 볼 만한 가치가 있겠냐, 사람들이 보겠냐 하는 의문을 제기하셨어요. 타당한 제기였다고 생각해요. 하지만, 시험적으로 해 볼만하다 생각으로 인식 씨와 제가 의기투합(!)해서 생중계는 한 번 꼭 해 보기로 했죠. ‘시험적’이라는 말에, 의문을 제기하던 분들도 선선히 ‘해 보라’는 입장을 말해 주셨죠 ㅋㅋ 
 
-사실 생중계를 하면 몇 명이나 볼까 하는 생각이 있었어요. 하지만, 한 번도 해 보지 못한 일에 대해서, 이렇게 직접 해 볼 수 있는 기회가 얼마나 있겠어요. &#8216;보는 사람이 많지 않아도 경험을 축적하는 데 도움이 될 것&#8217;이라는 제작팀장(!)님의 말에 저는 용기를 얻었죠. ^^ 
+사실 생중계를 하면 몇 명이나 볼까 하는 생각이 있었어요. 하지만, 한 번도 해 보지 못한 일에 대해서, 이렇게 직접 해 볼 수 있는 기회가 얼마나 있겠어요. ‘보는 사람이 많지 않아도 경험을 축적하는 데 도움이 될 것’이라는 제작팀장(!)님의 말에 저는 용기를 얻었죠. ^^ 
 
 ## 웹캠이냐 캠코더냐 
 
 그래서 화질 문제를 해결해 보기로 했죠. 앞에서 연사가 발제를 하고, 저는 자리에 앉아서 찍어야 했기 때문에 왠만큼은 화질이 좋아야 한다는 게 중요했어요. 그래서 아예 웹캠이 아니라 캠코더로 찍어보기로 했죠.
 
-그래서 저는 큰맘먹고! 사무실에서 한 시간 거리에 있는 영상 촬영 전문가의 집으로 찾아갔어요! 내일 바쁜 일이 있어서 오늘 내일은 힘들다는 말을 들었지만, &#8220;제가 알아서 해 볼 테니 캠코더 연결만 해 주세요. 테스트만 하면 되요~&#8221; 라고 졸라서 그 날 밤 11시에 찾아가서 ㄷㄷ;; 새벽까지 테스트를 해 보고 잤답니다.
+그래서 저는 큰맘먹고! 사무실에서 한 시간 거리에 있는 영상 촬영 전문가의 집으로 찾아갔어요! 내일 바쁜 일이 있어서 오늘 내일은 힘들다는 말을 들었지만, “제가 알아서 해 볼 테니 캠코더 연결만 해 주세요. 테스트만 하면 되요~” 라고 졸라서 그 날 밤 11시에 찾아가서 ㄷㄷ;; 새벽까지 테스트를 해 보고 잤답니다.
 
 테스트 결과는, 맥북에서 캠코더를 연결하면 잘 된다는 것이었습니다. 화질은 확실히 좋았어요. 제가 가져간 제 노트북에는 캠코더와 컴퓨터를 연결하는 1394 케이블을 꽂는 곳이 없어서 테스트를 해 볼 수 없었어요.
 
@@ -77,7 +77,7 @@ tags:
 
 ## 1394 케이블이 들어가는 노트북
 
-그런데 저랑 같이 맨날 일하는 &#8216;다함께&#8217;의 프로그래머 분이 1394 케이블이 들어가는 노트북을 갖고 있다는 사실을 알게 됐죠! 그래서 그 분이랑 금요일에 같이 테스트를 해 봤답니다.
+그런데 저랑 같이 맨날 일하는 ‘다함께’의 프로그래머 분이 1394 케이블이 들어가는 노트북을 갖고 있다는 사실을 알게 됐죠! 그래서 그 분이랑 금요일에 같이 테스트를 해 봤답니다.
 
 금요일 5시, 향린교회 3층 대예배실에 가서 미리 테스트를 해 봤어요. 아항&#8230; 그런데, 이 분 노트북에 1394 케이블을 꽂고 캠코더를 연결하니까, 제대로 되지 않는 것이었어요. 영상이 거의 제대로 나오지 않았어요. OTL;; 결국 맥북을 빌려야 하는 것인가&#8230;
 
@@ -85,11 +85,11 @@ tags:
 
 그런데 왠걸? 여기 1394 케이블 연결 단자가 있는 것이었어요!
 
-사람들은 말했죠. &#8220;이 후진 컴이 그런 것도 된단 말야?&#8221;
+사람들은 말했죠. “이 후진 컴이 그런 것도 된단 말야?”
 
 세상엔 상식을 깨는 일이 많답니다.
 
-&#8220;후진 컴&#8221;으로 1394 케이블을 연결하고 캠코더를 찍으니 영상이 아주 깔끔하게 잘 나왔어요.
+“후진 컴”으로 1394 케이블을 연결하고 캠코더를 찍으니 영상이 아주 깔끔하게 잘 나왔어요.
 
 그래서 저는 USB 키보드를 연결해서 영상을 찍기로 마음먹었죠.
 
@@ -107,7 +107,7 @@ tags:
 
 ## 걱정했던 방문수
 
-사실 트위터 사용자들이 &#8216;토론회&#8217; 생중계에 그닥 매력을 갖진 못할 거라고 생각해요.
+사실 트위터 사용자들이 ‘토론회’ 생중계에 그닥 매력을 갖진 못할 거라고 생각해요.
 
 트위터는 140자 단문 서비스예요. 짧게 그 때 그 때 소비할 수 있는 컨텐츠가 대부분을 차지하는 곳이죠.
 
@@ -121,9 +121,9 @@ tags:
 
 ## 신기술 사용 태도
 
-사실 저는 &#8216;신기술&#8217;에 대해서는 보수적인 태도를 취할 때가 많아요.
+사실 저는 ‘신기술’에 대해서는 보수적인 태도를 취할 때가 많아요.
 
-중요한 건 &#8216;기술&#8217;이 아니라 &#8216;내용&#8217;이라고 생각하기 때문이죠. 그리고 근본적으로 맞는 말이라고 생각해요. 3D 기술이 오래 전에 나왔지만, 대중적 성공을 거둔 것은 아바타라는 것을 생각하면 기술보다 내용이 더 중요하다는 것을 확인할 수 있죠.
+중요한 건 ‘기술’이 아니라 ‘내용’이라고 생각하기 때문이죠. 그리고 근본적으로 맞는 말이라고 생각해요. 3D 기술이 오래 전에 나왔지만, 대중적 성공을 거둔 것은 아바타라는 것을 생각하면 기술보다 내용이 더 중요하다는 것을 확인할 수 있죠.
 
 하지만, 그게 그렇게 단순한 것은 아니라는 점을 알아야 한다는 생각을 최근에 하게 됐어요.
 
