--- a/_posts/2010-05-02-기술발전과-통제능력의-강화에-대한-단상.md
+++ b/_posts/2010-05-02-기술발전과-통제능력의-강화에-대한-단상.md
@@ -20,7 +20,7 @@ tags:
 ---
 진보네트워크센터라는 것을 아시는지 모르겠습니다. 흔히 <a href="http://jjinbo.net/" target="_blank" class="broken_link">진보넷</a>이라고 부르죠. 꽤 많은 분들이 한 번쯤은 진보넷 메일 서비스를 이용해 보셨을 겁니다. 
 
-근데 진보넷은 서비스만 하는 게 아니라 진보적 관점에서 기술을 분석하는 작업도 계속 하고 있는 것 같아요. 오늘 제가 구독하고 있는 여러 사이트의 새 글을 둘러 보다가 <a href="http://blog.jinbo.net/" target="_blank">진보넷 블로그</a>에 올라온 글을 발견했습니다. 제목은 &#8216;<a href="http://blog.jinbo.net/jinbonet/?pid=141" target="_blank">기술발전과 통제능력의 강화</a>&#8216;예요. 한 번 읽어 볼 만한 글이라고 생각해서 소개합니다. 
+근데 진보넷은 서비스만 하는 게 아니라 진보적 관점에서 기술을 분석하는 작업도 계속 하고 있는 것 같아요. 오늘 제가 구독하고 있는 여러 사이트의 새 글을 둘러 보다가 <a href="http://blog.jinbo.net/" target="_blank">진보넷 블로그</a>에 올라온 글을 발견했습니다. 제목은 ‘<a href="http://blog.jinbo.net/jinbonet/?pid=141" target="_blank">기술발전과 통제능력의 강화</a>‘예요. 한 번 읽어 볼 만한 글이라고 생각해서 소개합니다. 
 
 내용을 요약하면 아래와 같아요. 
 
@@ -42,7 +42,7 @@ tags:
 > 
 > 지난 해에는 남북공동선언실천연대 정책위원을 국정원이 감청한 사실이 드러났다. 2008년 6월부터 2개월 동안 집과 사무실의 인터넷 이용 내역 및 핸드폰의 모든 통화, 문자 송수신 내역을 국정원이 통째로 감청했다.(패킷 감청) 
 > 
-> 사용된 방법 : 통신사가 10-30분 간격으로 위치정보를 수사관에게 보내 줬다.(&#8216;미래의 통신사실확인자료&#8217;를 요청하면 된다고 한다.) 
+> 사용된 방법 : 통신사가 10-30분 간격으로 위치정보를 수사관에게 보내 줬다.(‘미래의 통신사실확인자료’를 요청하면 된다고 한다.) 
 > 
 > 이런 게 2009년 상반기에만 9647건, 2년 반 동안 4만 건이 넘었다. 
 > 
@@ -52,7 +52,7 @@ tags:
 > 
 > 이렇게 되는 이유는 시민들이 공동체를 신회하지 않기 때문이다. 공동체가 안전을 보장해 준다고 믿는다면 이러지 않을 거다. 
 > 
-> 감시/통제 시스템이 &#8216;더 안전한 사회&#8217;를 보장할 것이라고 믿지 않는다. 시민의 안전욕구를 충족하는 방법은 공동체의 복원이다. 
+> 감시/통제 시스템이 ‘더 안전한 사회’를 보장할 것이라고 믿지 않는다. 시민의 안전욕구를 충족하는 방법은 공동체의 복원이다. 
 
 알아둘 만한 내용이 많이 있죠?
 
@@ -74,7 +74,7 @@ tags:
 
 통신을 통제할 수 있는 능력이 과거보다 지금, 양적으로 엄청나게 발달했지만 질적으로는 큰 차이가 없을 거라고 생각합니다. (개인에게도 어느정도 해당할 거라고 생각합니다. 지금도 여자친구랑 이메일로 사랑을 속삭이는 것보다는 오프라인 편지로 사랑을 속삭이는 경우가 더 많지 않나요? (통계자료는 없습니다 ㅋ)) 
 
-사실 가장 중요한 것은 &#8216;국가가 통신 기술로 얼마나 조사를 하느냐&#8217;가 아니라고 봅니다. 가장 중요한 것은 저항 세력의 힘. 즉, 세력관계라고 할 수 있겠죠. 검찰이 PD수첩 PD의 이메일을 뒤져서 사적인 것까지 막 폭로하고 그랬지만, 법원은 무죄 판결을 내렸습니다. 세력관계가 국가에 그리 유리하지 않았기 때문입니다. 
+사실 가장 중요한 것은 ‘국가가 통신 기술로 얼마나 조사를 하느냐’가 아니라고 봅니다. 가장 중요한 것은 저항 세력의 힘. 즉, 세력관계라고 할 수 있겠죠. 검찰이 PD수첩 PD의 이메일을 뒤져서 사적인 것까지 막 폭로하고 그랬지만, 법원은 무죄 판결을 내렸습니다. 세력관계가 국가에 그리 유리하지 않았기 때문입니다. 
 
 반대 사례도 있습니다. 김용철 변호사가 삼성의 모든 것을 폭로했지만 국가는 모든 정보를 무시했죠. 이 경우에는 국가가 탄압 주체가 아닌 경우지만, 어쨌든 정보가 아니라 세력관계가 핵심이라는 사실을 보여 주긴 합니다. 
 
