--- a/_posts/2010-05-23-첫-화면-변경의-이유.md
+++ b/_posts/2010-05-23-첫-화면-변경의-이유.md
@@ -54,11 +54,11 @@ tags:
   </div>
   
   <div>
-    &#8216;&#8221;안보 위기&#8221;는 사기다&#8217; 다음으로 강조되는 기사가 보이시나요?
+    ‘”안보 위기”는 사기다’ 다음으로 강조되는 기사가 보이시나요?
   </div>
   
   <div>
-    맞습니다. &#8220;IMF 긴축에 맞선 그리스의 반란&#8221;이라는 기사입니다. 그런데 가장 강조된 기사에 비해 사이즈 차이가 너무 많이 나죠.
+    맞습니다. “IMF 긴축에 맞선 그리스의 반란”이라는 기사입니다. 그런데 가장 강조된 기사에 비해 사이즈 차이가 너무 많이 나죠.
   </div>
   
   <div>
@@ -82,7 +82,7 @@ tags:
   </div>
   
   <div>
-    물론, 제가 디자인한 건 아니예요. ^^ 혹시 웹마스터 &#8216;기린&#8217;님을 기억하시나요? 돌아온 &#8216;기린&#8217;님이 첫 화면을 디자인해 주셨답니다. 그래서 나온 화면, 짜잔~ 아래와 같은 화면입니다.<br /> <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile3.uf.170294514D08475A2DD757.png" width="580" height="436" />
+    물론, 제가 디자인한 건 아니예요. ^^ 혹시 웹마스터 ‘기린’님을 기억하시나요? 돌아온 ‘기린’님이 첫 화면을 디자인해 주셨답니다. 그래서 나온 화면, 짜잔~ 아래와 같은 화면입니다.<br /> <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile3.uf.170294514D08475A2DD757.png" width="580" height="436" />
   </div>
 </div>
 
@@ -91,7 +91,7 @@ tags:
 </div>
 
 <div>
-  그 다음 메인 기사와 2번째 기사 사이의 강조 차이가 너무 나지 않도록 하는 것도 있었고요. 당장 &#8220;조사단 발표는 또 다른 의혹을 낳고 있다&#8221;는 온라인 기사인데요, 메인 기사에 비해서도 그렇게 강조가 죽지 않았죠.
+  그 다음 메인 기사와 2번째 기사 사이의 강조 차이가 너무 나지 않도록 하는 것도 있었고요. 당장 “조사단 발표는 또 다른 의혹을 낳고 있다”는 온라인 기사인데요, 메인 기사에 비해서도 그렇게 강조가 죽지 않았죠.
 </div>
 
 <div>
@@ -102,7 +102,7 @@ tags:
   (자, 여기까지 들으셨다면 바뀐 첫 화면에 대한 의견을 좀 주셔야겠죠? 한 마디 꼭 해 주세요! 인식씨가 반응을 궁금해 하세요! ㅋㅋ -> <a href="#communication" target="_self">댓글 남기러 가기</a>)
 </div>
 
-## 곁가지 이야기 &#8211; 조각그림이 달라졌어요.
+## 곁가지 이야기 - 조각그림이 달라졌어요.
 
 <div>
   그리고 곁가지 이야기인데요, 기사에 붙어 있는 조각그림이 달라졌어요.
