--- a/_posts/2010-07-27-레프트21-사진-갤러리.md
+++ b/_posts/2010-07-27-레프트21-사진-갤러리.md
@@ -72,9 +72,9 @@ tags:
 
 <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile3.uf.196508494D08476D181FBE.png" width="580" height="327" />
 
-자, 일단, ①사진을 눌렀을 때 화면입니다. 위와 같이 캡션과 함께 사진이 확대돼 보입니다. &#8216;레프트21&#8217;이라는 워터마크도 보실 수 있습니다.
+자, 일단, ①사진을 눌렀을 때 화면입니다. 위와 같이 캡션과 함께 사진이 확대돼 보입니다. ‘레프트21’이라는 워터마크도 보실 수 있습니다.
 
-맨 위에는 &#8216;좌우 방향키나 휠로 사진을 옮길 수 있습니다&#8217;라는 안내 메시지가 보일듯 말듯 떠 있네요. 사진 위에서 마우스 휠을 움직이거나 좌우 방향키를 누르시면 사진을 넘기면서 볼 수 있습니다.
+맨 위에는 ‘좌우 방향키나 휠로 사진을 옮길 수 있습니다’라는 안내 메시지가 보일듯 말듯 떠 있네요. 사진 위에서 마우스 휠을 움직이거나 좌우 방향키를 누르시면 사진을 넘기면서 볼 수 있습니다.
 
 사진 외의 허공을 누르거나 오른쪽 상단의 x 표시를 누르면 확대된 사진이 제자리로 돌아가고요. esc 키를 눌러도 꺼집니다.(이건 fancybox라는 오픈소스 라이브러리를 사용한 겁니다.)
 
@@ -88,19 +88,19 @@ tags:
 
 아래쪽에 있는 작은 사진들은, 현재 보이는 사진이 밝게 표시되기 때문에 앞으로 어떤 사진을 보게 될 지 알 수 있습니다.
 
-다른 이슈들을 보시려면 좌측 상단에 있는 &#8216;최신이슈&#8217;를 클릭하시면 되요. 그럼 어떤 화면으로 이동하게 될까요?
+다른 이슈들을 보시려면 좌측 상단에 있는 ‘최신이슈’를 클릭하시면 되요. 그럼 어떤 화면으로 이동하게 될까요?
 
 <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile10.uf.12226D474D08476F2C100B.png" width="580" height="366" />
 
 자, 위에 대충 설명을 적어 놨는데, 괜찮죠?
 
-오른쪽 상단에 있는 &#8216;레프트21&#8217; 아이콘을 누르면 레프트21의 원래 홈페이지로 이동합니다. 모든 화면에서 나오니까 금세 찾을 수 있을 거예요.
+오른쪽 상단에 있는 ‘레프트21’ 아이콘을 누르면 레프트21의 원래 홈페이지로 이동합니다. 모든 화면에서 나오니까 금세 찾을 수 있을 거예요.
 
 이번엔 검색 화면을 볼까요?
 
 <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile1.uf.18027A554D08476F3CA0FA.png" width="580" height="668" />
 
-다양한 검색결과가 나옵니다. 여기서는 자세히보기를 제공하지 않습니다. 그냥 사진을 클릭해서 보시면 되고, 이슈, 제목, 설명, 태그 각각의 검색결과가 5개 이상 있을 경우에는 &#8216;더 보기&#8217; 버튼이 뜹니다. &#8216;더 보기&#8217;를 누르시면 해당 키워드로 검색된 사진들을 더 많이 보실 수 있습니다.
+다양한 검색결과가 나옵니다. 여기서는 자세히보기를 제공하지 않습니다. 그냥 사진을 클릭해서 보시면 되고, 이슈, 제목, 설명, 태그 각각의 검색결과가 5개 이상 있을 경우에는 ‘더 보기’ 버튼이 뜹니다. ‘더 보기’를 누르시면 해당 키워드로 검색된 사진들을 더 많이 보실 수 있습니다.
 
 ## 첫 화면
 
