--- a/_posts/2010-08-06-기사-하단의-후원-링크-그리고-페이스북-퍼가기-버튼.md
+++ b/_posts/2010-08-06-기사-하단의-후원-링크-그리고-페이스북-퍼가기-버튼.md
@@ -49,7 +49,7 @@ tags:
 > (…) 사용자들은 … 예외적인 경우를 제외하면 웹 사이트의 유용한 부분은 모두 일반 문자열로 표시되는 것으로 생각하는 데 길들여졌다. 우리는 전자상거래 사이트에 있는 구매 버튼이 너무 크고 다채로운 색상 때문에 사용자들의 잠재의식에 의해 걸러져 제품을 구매하지 않는 경우도 발견했다. … 광고를 무시하는 반사 작용에 의해 쳐다볼 생각조차 안 하게 되는 것이다.
 > 
 > <p style="text-align: right;">
->   &#8211; 76p, ‘광고처럼 보이는 디자인 요소’, 《웹 사용성 중심의 웹 사이트 제작론》
+>   - 76p, ‘광고처럼 보이는 디자인 요소’, 《웹 사용성 중심의 웹 사이트 제작론》
 > </p>
 
 “움직이는 건 눈에 띤다”는 대명제가 있습니다. 맞습니다. 가장 눈에 띠죠.
