--- a/_posts/2010-10-13-모두를-위한-웹.md
+++ b/_posts/2010-10-13-모두를-위한-웹.md
@@ -22,7 +22,7 @@ tags:
 > 
 > 뭐, 간단한 수정이고 크게 불편한거 없으니 천천히 수정하셔요&#8230;&#8230;ㅋ
 
-라는 댓글이었습니다. 위 댓글에 나오는 <a href="http://www.opera.com/" target="_blank">&#8216;오페라&#8217;는 웹표준을 100% 준수하기로 유명한 웹브라우저</a>입니다.
+라는 댓글이었습니다. 위 댓글에 나오는 <a href="http://www.opera.com/" target="_blank">‘오페라’는 웹표준을 100% 준수하기로 유명한 웹브라우저</a>입니다.
 
 레프트21 웹사이트가 모든 메이저 웹브라우저에서 잘 보인다는 점이 긍지인 저로서는 그냥 넘어갈 수 없는 댓글이었습니다. 어떤 버그인지는 댓글로만은 알기 힘들기 때문에 아래 스크린샷을 첨부해 드립니다. 보세요.
 
@@ -34,7 +34,7 @@ tags:
   </p>
 </div>
 
-생각해 보세요. 오페라 사용자가 레프트21 사이트에 들어왔다가 레이아웃이 깨지는 걸 보고서 &#8220;아 오페라 별로네&#8221; 하고 생각한다면 저는 웹브라우저의 다양성을 죽이는 게 되는 거죠. 게다가 그 웹브라우저는 표준을 100% 준수한 웹브라우저! 그렇게 되면 레프트21 웹마스터인 저는 표준의 확산을 늦추는 역할을 해 버리게 되는 것입니다.
+생각해 보세요. 오페라 사용자가 레프트21 사이트에 들어왔다가 레이아웃이 깨지는 걸 보고서 “아 오페라 별로네” 하고 생각한다면 저는 웹브라우저의 다양성을 죽이는 게 되는 거죠. 게다가 그 웹브라우저는 표준을 100% 준수한 웹브라우저! 그렇게 되면 레프트21 웹마스터인 저는 표준의 확산을 늦추는 역할을 해 버리게 되는 것입니다.
 
 그래서 열라 고쳤습니다. 오늘 아침부터 작업했는데 의외의 암초를 만나서 좀 걸렸습니다.
 
