--- a/_posts/2010-11-24-현대차-비정규직-파업투쟁을-온라인에서도-홍보해.md
+++ b/_posts/2010-11-24-현대차-비정규직-파업투쟁을-온라인에서도-홍보해.md
@@ -27,7 +27,7 @@ tags:
 
 ## <레프트21>기사를 활용해주세요
 
-<a href="http://twitter.com/#%21/left21twit" target="_blank">트위터로 보낸 <레프트21>의 기사</a>를 RT해주세요. RT할 때는 본인이 기사를 본 짤막한 소감과 함께 해주시면 더 좋습니다. &nbsp;또는 웹사이트에서 기사의 맨 아래의 &#8220;트위터로 보내요&#8221;버튼을 통해 기사를 트윗하실 수도 있습니다.
+<a href="http://twitter.com/#%21/left21twit" target="_blank">트위터로 보낸 <레프트21>의 기사</a>를 RT해주세요. RT할 때는 본인이 기사를 본 짤막한 소감과 함께 해주시면 더 좋습니다. &nbsp;또는 웹사이트에서 기사의 맨 아래의 “트위터로 보내요”버튼을 통해 기사를 트윗하실 수도 있습니다.
 
 블로그를 운영하신다면 현대차 비정규직 관련글을 포스팅해주세요. 글을 쓰실 때에는 관련기사를 글 내용에 링크를 걸어 자세한 내용을 기사를 통해서도 볼 수 있게 해주세요. 트위터나 블로그를 통해 현대차 관련 글을 쓰실 때에도 관련된 <레프트21>기사를 링크걸어주세요. 가장 좋기로는 기사의 일부를 인용한 후 기사전문을 볼 수 있는 링크를 달는 것입니다.
 
@@ -39,7 +39,7 @@ tags:
   </div>
   
   <p>
-    &nbsp;<레프트21> 홈페이지에서 <a href="http://wspaper.org/6_issue.php?issue_no=85" target="_blank">현대차 비정규직 투쟁 집중이슈페이지</a>를 링크하시는 것도 중요합니다. <레프트21>의 페이지 중에서는 현대차 비정규직 파업관련 검색결과에서 이 페이지가 가장 상위에 랭크됩니다. 그리고 집중이슈페이지에 가보시면 &#8220;집중이슈 퍼가기&#8221; 버튼이 있습니다. 이 버튼을 클릭하면 집중이슈 최근 목록을 퍼갈 수 있는 소스가 나옵니다. 이 소스를 긁어서 퍼나르는 것도 좋은 방법입니다.
+    &nbsp;<레프트21> 홈페이지에서 <a href="http://wspaper.org/6_issue.php?issue_no=85" target="_blank">현대차 비정규직 투쟁 집중이슈페이지</a>를 링크하시는 것도 중요합니다. <레프트21>의 페이지 중에서는 현대차 비정규직 파업관련 검색결과에서 이 페이지가 가장 상위에 랭크됩니다. 그리고 집중이슈페이지에 가보시면 “집중이슈 퍼가기” 버튼이 있습니다. 이 버튼을 클릭하면 집중이슈 최근 목록을 퍼갈 수 있는 소스가 나옵니다. 이 소스를 긁어서 퍼나르는 것도 좋은 방법입니다.
   </p>
   
   <p>
@@ -59,7 +59,7 @@ tags:
   </p>
   
   <p>
-    자신의 활동을 짧게 적거나, 핸드폰으로 그 모습을 담아 트위터에 보내주세요. 보내실 때 &#8216;#비정규직_&#8217; 이나 &#8216;#민주노총_&#8217; 태그를 붙여서 보내주세요. &#8216;#비정규직_&#8217;의 태그를 달면 현재 점거농성을 하고 있는 노동자들과 &#8216;<a href="http://twitaddons.com/group_follow/detail.php?id=28219" target="_blank">비정규직당</a>&#8216;에 가입한 지지자들이 볼 수 있습니다. &#8216;#민주노총_&#8217;태그를 달면 민주노총을 팔로우하는 사람들이 볼 수 있겠죠.
+    자신의 활동을 짧게 적거나, 핸드폰으로 그 모습을 담아 트위터에 보내주세요. 보내실 때 ‘#비정규직_’ 이나 ‘#민주노총_’ 태그를 붙여서 보내주세요. ‘#비정규직_’의 태그를 달면 현재 점거농성을 하고 있는 노동자들과 ‘<a href="http://twitaddons.com/group_follow/detail.php?id=28219" target="_blank">비정규직당</a>‘에 가입한 지지자들이 볼 수 있습니다. ‘#민주노총_’태그를 달면 민주노총을 팔로우하는 사람들이 볼 수 있겠죠.
   </p>
   
   <p>
@@ -76,7 +76,7 @@ tags:
   
   <div>
     <div style="text-align: center;">
-      1공장을 점거하고 있는 비정규직 노동자들의 트위터 계정(출처: 오마이뉴스 &#8220;<a href="http://www.ohmynews.com/NWS_Web/view/at_pg.aspx?CNTN_CD=A0001482566&CMPT_CD=P0000" target="_blank">현대차 점거 비정규직, 트위터로 부사장에게 한판승</a>&#8220;)
+      1공장을 점거하고 있는 비정규직 노동자들의 트위터 계정(출처: 오마이뉴스 “<a href="http://www.ohmynews.com/NWS_Web/view/at_pg.aspx?CNTN_CD=A0001482566&CMPT_CD=P0000" target="_blank">현대차 점거 비정규직, 트위터로 부사장에게 한판승</a>“)
     </div>
     
     <h2>
@@ -84,7 +84,7 @@ tags:
     </h2>
     
     <p>
-      아직 주류 언론에서는 현대차 비정규직 투쟁의 정당성이 제대로 다뤄지지 않고 있을 뿐더러 보수언론들은 추악한 선동을 하고 있습니다. 예컨대 어제 조선일보는 마치 현대차 비정규직 노동자들이 &#8216;귀족노동자&#8217;인 양 말합니다. 그리고 정규직과 비정규직을 이간질해 투쟁의 정당성을 어떻게든 깍아내리려고 혈안입니다.
+      아직 주류 언론에서는 현대차 비정규직 투쟁의 정당성이 제대로 다뤄지지 않고 있을 뿐더러 보수언론들은 추악한 선동을 하고 있습니다. 예컨대 어제 조선일보는 마치 현대차 비정규직 노동자들이 ‘귀족노동자’인 양 말합니다. 그리고 정규직과 비정규직을 이간질해 투쟁의 정당성을 어떻게든 깍아내리려고 혈안입니다.
     </p>
     
     <p>
@@ -97,7 +97,7 @@ tags:
     
     <ul>
       <li>
-        블로그에 포스팅 하시 때에는 제목에 &#8220;현대차 비정규직 파업&#8221;또는 &#8220;현대차 비정규직 파업투쟁&#8221;을 반드시 포함시켜주세요. 이 키워드가 이 쟁점에서는 검색이 가장 많이 되는 키워드입니다.
+        블로그에 포스팅 하시 때에는 제목에 “현대차 비정규직 파업”또는 “현대차 비정규직 파업투쟁”을 반드시 포함시켜주세요. 이 키워드가 이 쟁점에서는 검색이 가장 많이 되는 키워드입니다.
       </li>
       <li>
         DAUM View에 가입되 있다면 블로그에 포스팅 하실 때 DAUM View의 사회채널로 글을 송고해주세요. 사회채널 트랙백주소는: http://v.daum.net/tb/ch/society 입니다. (<a href="http://daumview.tistory.com/31" target="_blank" class="broken_link">트랙백 거는 법</a>)
@@ -106,7 +106,7 @@ tags:
         가능하시다면, 트위터와 블로그 그리고 <a href="http://hjbtw.jinbo.net/zb/zboard.php?id=free" target="_blank">현대차 비정규직지회 게시판</a>을 함께 활용해 주세요. 예컨대 블로그에 좋은 글을 쓰셨다면 트위터로도 보내시고 게시판에도 게시하는 식으로 말이죠.
       </li>
       <li>
-        트윗하실 때는 &#8216;#비정규직_&#8217;이나 &#8216;#민주노총_&#8217; 태그를 붙여주세요. &#8216;#비정규직_&#8217;태그는 비정규직당 가입자들이 볼 수 있고 &#8216;#민주노총_&#8217;태그는 민주노총 홈페이지에 노출됩니다.
+        트윗하실 때는 ‘#비정규직_’이나 ‘#민주노총_’ 태그를 붙여주세요. ‘#비정규직_’태그는 비정규직당 가입자들이 볼 수 있고 ‘#민주노총_’태그는 민주노총 홈페이지에 노출됩니다.
       </li>
     </ul>
     
