--- a/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
+++ b/_posts/2011-02-14-특별이슈-페이지-―-기존-디자인의-일관성을-해치지.md
@@ -44,7 +44,7 @@ tags:
 
 ## 기존 디자인의 일관성을 해치지 않는 디자인재설계
 
-우리는 특별이슈 페이지를 디자인을 시작 할 때 외부로부터 다음과 같은 제안을 받았습니다. 새로운 첫화면을 만들어서 완전히 새롭게 &#8220;<a title="[http://wspaper.org/6_issue.php?issue_no=87]로 이동합니다." target="_blank" href="http://wspaper.org/6_issue.php?issue_no=87">이집트 혁명</a>&#8220;을 강조하고 원치 않는 사람들은 기존 첫화면으로 갈 수 있도록 링크를 제공하자는 것이었습니다. 이런 방법은 기존의 주류 홈페이지에서 자주 사용하던 방법이긴 합니다. 
+우리는 특별이슈 페이지를 디자인을 시작 할 때 외부로부터 다음과 같은 제안을 받았습니다. 새로운 첫화면을 만들어서 완전히 새롭게 “<a title="[http://wspaper.org/6_issue.php?issue_no=87]로 이동합니다." target="_blank" href="http://wspaper.org/6_issue.php?issue_no=87">이집트 혁명</a>“을 강조하고 원치 않는 사람들은 기존 첫화면으로 갈 수 있도록 링크를 제공하자는 것이었습니다. 이런 방법은 기존의 주류 홈페이지에서 자주 사용하던 방법이긴 합니다. 
 
 그러나 이 방법은 사용성 측면에서 좋지 않습니다. 
 
