--- a/_posts/2011-03-13-한-번-본-기사는-제목이-회색혹은-보라색-표시됩니다.md
+++ b/_posts/2011-03-13-한-번-본-기사는-제목이-회색혹은-보라색-표시됩니다.md
@@ -13,13 +13,13 @@ categories:
 ---
 <레프트21> 웹마스터들은 웹사이트를 개선하기 위해 세미나를 진행하고 있습니다. 요즘 보는 책은 바로 《웹 사용성 중심의 웹 사이트 제작론》이라는 책입니다.&nbsp;
 
-그런데 이 책에서&nbsp;제이콥 닐슨은 &#8220;사용자들이 이미 방문했던 페이지에 대해 일단 알게 되면 부주의하게 다시 방문하는 일이 줄어든다&#8221; 고 말합니다. 그리고 이미 방문한 링크를 표시해 주지 않는 것이 &#8220;심각한 사용성 문제&#8221;가 될 수 있다고 말합니다.
+그런데 이 책에서&nbsp;제이콥 닐슨은 “사용자들이 이미 방문했던 페이지에 대해 일단 알게 되면 부주의하게 다시 방문하는 일이 줄어든다” 고 말합니다. 그리고 이미 방문한 링크를 표시해 주지 않는 것이 “심각한 사용성 문제”가 될 수 있다고 말합니다.
 
 아래는 좀 긴 인용입니다.
 
-> &#8220;우리가 진행한 테스트에서 사용자들은 페이지에 무의식적으로 다시 방문했고 더 쉽게 길을 잃었다. 어느 페이지에 이미 방문했는지 확실치 않은 비슷한 링크들 간의 차이를 잘못 인식하거나 모르고 지나치는 일이 발생하여 해당 사이트의 이용을 쉽게 포기했다. 사용자들의 작업을 제대로 반영하지 못하고 그들의 여행을 제대로 돕지 못한 사이트에서는 성취도가 낮게 나타났다.
+> “우리가 진행한 테스트에서 사용자들은 페이지에 무의식적으로 다시 방문했고 더 쉽게 길을 잃었다. 어느 페이지에 이미 방문했는지 확실치 않은 비슷한 링크들 간의 차이를 잘못 인식하거나 모르고 지나치는 일이 발생하여 해당 사이트의 이용을 쉽게 포기했다. 사용자들의 작업을 제대로 반영하지 못하고 그들의 여행을 제대로 돕지 못한 사이트에서는 성취도가 낮게 나타났다.
 > 
-> &#8220;그러한 사용성 문제는 시각적 차이가 없는 경우 클릭한 것을 종종 기억하지 못하게 되는, 단기 기억력이 약한 사용자일 경우 상황은 더 악화된다. 물론 모든 인간은 정도의 차이는 있지만 어느 정도는 단기 기억력 문제를 갖고 있고 따라서 모든 사용자들은 링크 색상 변경으로 만족감을 얻는다. 확실히 이 부분은 대다수 사람들보다는 특정 소수 계층에 영향을 미치기 때문에, 예를 들어 나이 많은 사용자가 많은 사이트라면 링크 색상을 변경하는 것이 특히 중요하다.&#8221;
+> “그러한 사용성 문제는 시각적 차이가 없는 경우 클릭한 것을 종종 기억하지 못하게 되는, 단기 기억력이 약한 사용자일 경우 상황은 더 악화된다. 물론 모든 인간은 정도의 차이는 있지만 어느 정도는 단기 기억력 문제를 갖고 있고 따라서 모든 사용자들은 링크 색상 변경으로 만족감을 얻는다. 확실히 이 부분은 대다수 사람들보다는 특정 소수 계층에 영향을 미치기 때문에, 예를 들어 나이 많은 사용자가 많은 사이트라면 링크 색상을 변경하는 것이 특히 중요하다.”
 > 
 > ㅡ 웹 사용성 중심의 웹 사이트 제작론, 61p</p> 
 
