--- a/_posts/2011-03-19-구글-맞춤-검색-에러로-검색을-일시-변경했습니다.md
+++ b/_posts/2011-03-19-구글-맞춤-검색-에러로-검색을-일시-변경했습니다.md
@@ -15,21 +15,21 @@ tags:
   - 구글검색
   - 노동자 연대
 ---
-지금은 원래대로 돌아왔습니다. 다만, 이 기능을 그대로 활용할 수 있도록, 검색어를 입력했을 경우 시간순 검색하기와 함께 &#8216;구글에서 검색하기&#8217;가 새로운 항목으로 추가됐습니다.
+지금은 원래대로 돌아왔습니다. 다만, 이 기능을 그대로 활용할 수 있도록, 검색어를 입력했을 경우 시간순 검색하기와 함께 ‘구글에서 검색하기’가 새로운 항목으로 추가됐습니다.
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile8.uf.140BFC4C4D90B96A1C3013.png" class="aligncenter" width="436" height="113" alt="" filename="구글에서 검색하기.png" filemime="image/jpeg" />
 
-일단 검색을 하면 오른쪽에 &#8216;시간순 검색하기&#8217;와 함께 &#8216;구글에서 검색하기&#8217; 버튼이 뜹니다.
+일단 검색을 하면 오른쪽에 ‘시간순 검색하기’와 함께 ‘구글에서 검색하기’ 버튼이 뜹니다.
 
-&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;
+——————
 
 오늘 아침에 출근을 해서 보니 레프트21의 구글 맞춤 검색에 에러가 발생했습니다. 이것저것 살펴봤는데 레프트21쪽 문제가 아니라 구글쪽 문제였습니다.
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile10.uf.1269A3584D8431841F5A58.png" class="aligncenter" width="580" height="242" alt="" filename="cfile10.uf.1269A3584D8431841F5A58.png" filemime="" />
 
-그림을 보세요. 핵발전으로 검색을 했는데 아무 것도 뜨지 않았습니다. &#8220;모든 핵발전소를 폐쇄하라&#8221; 기사 바로 위에 얇은 박스가 보이시죠? 거기가 바로 검색 결과가 나와야 하는 공간입니다.
+그림을 보세요. 핵발전으로 검색을 했는데 아무 것도 뜨지 않았습니다. “모든 핵발전소를 폐쇄하라” 기사 바로 위에 얇은 박스가 보이시죠? 거기가 바로 검색 결과가 나와야 하는 공간입니다.
 
-심지어 검색결과가 없는 경우에는 &#8220;검색 결과가 없습니다&#8221; 하는 메세지가 떠야 하는데 그것조차 나오지 않았습니다.
+심지어 검색결과가 없는 경우에는 “검색 결과가 없습니다” 하는 메세지가 떠야 하는데 그것조차 나오지 않았습니다.
 
 그래서 일단, 구글 페이지에서 검색을 시키도록 바꿨습니다. 그래서 이제 검색하면 아래 동영상처럼 새 창이 뜨면서 구글 검색이 나오고 거기서 검색이 됩니다. 임시조치죠.
 
