--- a/_posts/2011-04-06-〈레프트21〉웹사이트의-사용성-문제를-수학적으로.md
+++ b/_posts/2011-04-06-〈레프트21〉웹사이트의-사용성-문제를-수학적으로.md
@@ -30,4 +30,4 @@ tags:
 
 제이콥 닐슨은 또한 **“사람들이 경험하게 되는 사용성 문제의 약 3/4이 검색, 읽기, 정보 이해 등 사용자의 기본 목표와 관계”가 많다**고 했습니다. 이 핵심적인 항목을 중심으로&nbsp;<a href="http://wspaper.org/" \_mce\_href="http://wspaper.org/">〈레프트21〉</a>웹사이트를 예를 들어서 분석해볼까합니다. 
 
-분석 결과는 제 블로그의 <a title="[http://www.oneweb.co.kr/?p=461]로 이동합니다." target="_blank" href="http://www.oneweb.co.kr/?p=461">&#8220;페이지 디자인 사용성 보고서 ? 〈레프트21〉웹사이트를 통해&#8221;</a>에서 보실 수 있습니다^^
+분석 결과는 제 블로그의 <a title="[http://www.oneweb.co.kr/?p=461]로 이동합니다." target="_blank" href="http://www.oneweb.co.kr/?p=461">“페이지 디자인 사용성 보고서 ? 〈레프트21〉웹사이트를 통해”</a>에서 보실 수 있습니다^^
