--- a/_posts/2011-04-11-마르크스21-광고를-개선했습니다.md
+++ b/_posts/2011-04-11-마르크스21-광고를-개선했습니다.md
@@ -22,15 +22,15 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile25.uf.18731B3B4DA32A0C433C56.png" class="aligncenter" width="257" height="364" alt="" filename="마르크스21 예전 광고.png" filemime="image/jpeg" />
 
-기사 중간에 &#8220;나는 광고요!&#8221; 하는 식으로 저렇게 <a href="http://marx21.or.kr" target="_self" title="[http://marx21.or.kr]로 이동합니다.">마르크스21</a> 광고가 있었습니다.
+기사 중간에 “나는 광고요!” 하는 식으로 저렇게 <a href="http://marx21.or.kr" target="_self" title="[http://marx21.or.kr]로 이동합니다.">마르크스21</a> 광고가 있었습니다.
 
 웹사이트 사용성 문제의 대가 제이콥 닐슨은 각종 광고 배너에 대해 이렇게 말합니다.
 
-> 사용자들이 갖고 있는 가장 훌륭한 능력은 믿을 수 없을 정도로 강력한 &#8220;배너 무시&#8221; 능력이다. 시선 추적 연구에 따르면 백만 분의 1초 동안 배너를 쳐다보지만 그 이상은 절대로 쳐다보지 않거나 읽지 않는다는 기록을 보였다. 게다가 사용자들은 그들의 눈을 훈련시켜 상당히 불쾌하게 깜박이는 배너를 감각적으로 잽싸게 피하기까지 한다. … 페이지의 여백에 있는 다채로운 색상의 상자들 역시 무시한다. … 특히 애니메이션을 포함하고 있는 것은 사용자들로부터 무시될 수 있는 위험을 안고 있는 것이다. … 테스트를 끝낸 후 사용자들에게 물어볼 때마다 그들은 항상 &#8220;아 보긴 했지만 광고처럼 보여 무시했어요.&#8221;라고 말한다.(《웹 사용성 중심의 웹 사이트 제작론》,76p)&nbsp;
+> 사용자들이 갖고 있는 가장 훌륭한 능력은 믿을 수 없을 정도로 강력한 “배너 무시” 능력이다. 시선 추적 연구에 따르면 백만 분의 1초 동안 배너를 쳐다보지만 그 이상은 절대로 쳐다보지 않거나 읽지 않는다는 기록을 보였다. 게다가 사용자들은 그들의 눈을 훈련시켜 상당히 불쾌하게 깜박이는 배너를 감각적으로 잽싸게 피하기까지 한다. … 페이지의 여백에 있는 다채로운 색상의 상자들 역시 무시한다. … 특히 애니메이션을 포함하고 있는 것은 사용자들로부터 무시될 수 있는 위험을 안고 있는 것이다. … 테스트를 끝낸 후 사용자들에게 물어볼 때마다 그들은 항상 “아 보긴 했지만 광고처럼 보여 무시했어요.”라고 말한다.(《웹 사용성 중심의 웹 사이트 제작론》,76p)&nbsp;
 
 그렇습니다. 예전 <a href="http://marx21.or.kr" target="_self" title="[http://marx21.or.kr]로 이동합니다.">마르크스21</a> 광고는 바로 너무나 광고처럼 보인다는 점이 문제였습니다.
 
-아마도 레프트21 독자분들 중 많은 분들이 <a href="http://marx21.or.kr" target="_self" title="[http://marx21.or.kr]로 이동합니다.">마르크스21</a> 광고를 보지 못했을 가능성이 큽니다. 레프트21 독자분들도 &#8220;믿을 수 없을 정도로 강력한 &#8216;배너 무시&#8217; 능력&#8221;이 있을 테니까 말입니다.
+아마도 레프트21 독자분들 중 많은 분들이 <a href="http://marx21.or.kr" target="_self" title="[http://marx21.or.kr]로 이동합니다.">마르크스21</a> 광고를 보지 못했을 가능성이 큽니다. 레프트21 독자분들도 “믿을 수 없을 정도로 강력한 ‘배너 무시’ 능력”이 있을 테니까 말입니다.
 
 ## 역설
 
@@ -48,7 +48,7 @@ tags:
 
 ## 최악의 웹사이트 디자인
 
-이 또한 사용성의 대가 제이콥 닐슨에게 배운 바를 실천한 것입니다. 제이콥 닐슨은 최악의 웹사이트 디자인 10가지 중 하나인 &#8220;광고처럼 보이는 디자인 요소&#8221;의 하위 항목으로 &#8220;움직이는 그림과 자동 스크롤되는 문자열&#8221;을 넣었습니다.
+이 또한 사용성의 대가 제이콥 닐슨에게 배운 바를 실천한 것입니다. 제이콥 닐슨은 최악의 웹사이트 디자인 10가지 중 하나인 “광고처럼 보이는 디자인 요소”의 하위 항목으로 “움직이는 그림과 자동 스크롤되는 문자열”을 넣었습니다.
 
 이 관점에서 본다면 <a href="http://marx21.or.kr" target="_self" title="[http://marx21.or.kr]로 이동합니다.">마르크스21</a> 예전 광고는 최악의 웹사이트 디자인에 딱 들어맞았던 것이죠. 말하면 자동 스크롤되는 문자열이었기 때문입니다.
 
