--- a/_posts/2011-10-06-레프트21-모바일-―-자세히-살펴보기.md
+++ b/_posts/2011-10-06-레프트21-모바일-―-자세히-살펴보기.md
@@ -13,7 +13,7 @@ categories:
 ---
 레프트21 모바일 사이트가 얼마 전에 개장했습니다. 단지 화면을 좀 모바일에 맞게 개편한 것이라고 생각하실 수도 있습니다. 하지만, 곳곳에 배려들이 들어가 있다는 사실을 알아 주셨으면 좋겠습니다. ^^
 
-어떤 기획의도를 가지고 모바일 사이트를 만들었는지 적은 글이 이 글 바로 위에 있는 <a title="[http://work.local/webmaster/90]로 이동합니다." href="http://work.local/webmaster/90" target="_blank" class="broken_link">&#8220;<레프트21을 그대 손 안에!&#8221;</a>입니다. 저 글을 못 읽으신 분들이라면 저 글 먼저 읽고 이 글을 읽으러 돌아 오세요.
+어떤 기획의도를 가지고 모바일 사이트를 만들었는지 적은 글이 이 글 바로 위에 있는 <a title="[http://work.local/webmaster/90]로 이동합니다." href="http://work.local/webmaster/90" target="_blank" class="broken_link">“<레프트21을 그대 손 안에!”</a>입니다. 저 글을 못 읽으신 분들이라면 저 글 먼저 읽고 이 글을 읽으러 돌아 오세요.
 
 지금부터 이 글에서는 눈여겨 보지 않으면 잘 모를 수 있는, 그런 기능들을 간략히 설명드리도록 하겠습니다.
 
@@ -23,7 +23,7 @@ categories:
   기존 모바일 웹의 대부분은 m.domain.com과 같이 모바일 페이지를 별도로 만들어 접근하도록 합니다. 일종의 사이트 구축을 하나 더 하는 셈이 되는 거죠. 이렇게 하면 비용과 시간이 많이 듭니다.
 </div>
 
-이렇게 구축하는 경우 모바일 페이지에는 PC에서 접근할 수 있는 기능들을 지원하지 않는 경우가 많습니다. 모바일 사용자들은 특정 기능에 접근하지 못하게 된 거죠. 이런 것때문에 &#8216;PC화면보기&#8217;라는 링크를 하나 더 만들어 둡니다. PC화면 보기 버튼이 없으면 더 골때리는 상황이 벌어집니다. 특정 기능에는 아예 접근을 못하게 되니까요. 접근성 개선을 위해 모바일 페이지를 만들었지만 이 때문에 또 다른 접근성 문제가 생기는 아이러니한 상황이 벌어지는 것입니다.
+이렇게 구축하는 경우 모바일 페이지에는 PC에서 접근할 수 있는 기능들을 지원하지 않는 경우가 많습니다. 모바일 사용자들은 특정 기능에 접근하지 못하게 된 거죠. 이런 것때문에 ‘PC화면보기’라는 링크를 하나 더 만들어 둡니다. PC화면 보기 버튼이 없으면 더 골때리는 상황이 벌어집니다. 특정 기능에는 아예 접근을 못하게 되니까요. 접근성 개선을 위해 모바일 페이지를 만들었지만 이 때문에 또 다른 접근성 문제가 생기는 아이러니한 상황이 벌어지는 것입니다.
 
 레프트21은 이 문제를 해결하기 위해 <a title="[http://html.nhncorp.com/blog/textyle/42284]로 이동합니다." href="http://html.nhncorp.com/blog/textyle/42284" target="_blank">‘미디어쿼리’</a>라고 부르는 기술을 사용하였습니다. 이 기술은 <a title="[http://www.metabrain.com/metabrain-tweekly-report-vol68/]로 이동합니다." href="http://www.metabrain.com/metabrain-tweekly-report-vol68/" target="_blank">반응형 웹을 구현하기위해 사용하는 기술</a> 중 하나입니다. 쉽게 말해서 기기의 화면 크기에 따라 레이아웃이나 스타일이 바뀌도록 한 것입니다. 긴 설명보다는 직접 보는것이 이해가 빠를 것입니다.
 
@@ -40,7 +40,7 @@ categories:
 
 ### 첫화면 섹션 구분과 바로가기 기능
 
-모바일 화면 디자인에서 가장 고민이되고 토론이 많이 되었던 것이 첫화면 디자인이었습니다.?첫화면은 매우 많은 내용이 있기 때문에 단순히 일렬로 나열하면 매우 긴 스크롤이 생깁니다. PC에서 보는 것보다는 웹페이지를 탐색하기 힘들어 지죠.?그래서 &#8216;기능을 축소해야하지 않을까?&#8217;라는 유혹을 많이 받게됩니다.
+모바일 화면 디자인에서 가장 고민이되고 토론이 많이 되었던 것이 첫화면 디자인이었습니다.?첫화면은 매우 많은 내용이 있기 때문에 단순히 일렬로 나열하면 매우 긴 스크롤이 생깁니다. PC에서 보는 것보다는 웹페이지를 탐색하기 힘들어 지죠.?그래서 ‘기능을 축소해야하지 않을까?’라는 유혹을 많이 받게됩니다.
 
 그러나 모바일로 접근했을때?PC로 사용했던 기능이(사소한 기능이라고 하더라도) 없을때, 사용자들은 당황할 것입니다. 작은 화면에 모든 기능이 들어갈 수 있도록 하면서도 사용이 편리하도록 할 필요가 있었습니다.
 
@@ -82,7 +82,7 @@ m.domain.com 사이트들에 가 보면 검색 기능이 없는 경우들이 종
 
 그래서 기사를 검색하려면 구글로 하거나, PC화면 보기로 들어가야 합니다. 레프트21은 모바일에서 모든 기능에 접근할 수 있도록 하는 걸 목표했습니다. 그래서 모바일 화면에서도 검색을 할 수 있게 했습니다.
 
-단, 직관성을 유지하기 위해 데스크탑에 있는 검색 종류 선택은 없앴습니다. 대신, 구글 검색을 하고 난 뒤에 &#8216;시간순 검색&#8217;을 선택할 수 있도록 만들었습니다. 같은 기능을 이용할 수 있도록 한 것이죠.
+단, 직관성을 유지하기 위해 데스크탑에 있는 검색 종류 선택은 없앴습니다. 대신, 구글 검색을 하고 난 뒤에 ‘시간순 검색’을 선택할 수 있도록 만들었습니다. 같은 기능을 이용할 수 있도록 한 것이죠.
 
 ## 확대 가능
 
@@ -96,7 +96,7 @@ m.domain.com 사이트들에 가 보면 검색 기능이 없는 경우들이 종
 
 <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile10.uf.2069613A4E9542881A1A15.jpg" width="630" height="407" />
 
-레프트21 후원은 후원회원이 되어 정기적으로 CMS 후원을 하는 경우와 한 번 후원하는 경우로 나뉘어 있습니다. 예전에는 &#8216;한 번 후원하기&#8217;가 아니라 &#8216;후원하기&#8217;로 돼 있었습니다. 즉, 후원회원 신청하기와 후원하기 사이에 어떤 차이가 있는지 이름만 보고는 직관적으로 알기가 힘들었던 것입니다.
+레프트21 후원은 후원회원이 되어 정기적으로 CMS 후원을 하는 경우와 한 번 후원하는 경우로 나뉘어 있습니다. 예전에는 ‘한 번 후원하기’가 아니라 ‘후원하기’로 돼 있었습니다. 즉, 후원회원 신청하기와 후원하기 사이에 어떤 차이가 있는지 이름만 보고는 직관적으로 알기가 힘들었던 것입니다.
 
 그리고 맨 위에 안내문이 너무 길어서 후원회원과 한 번 후원을 선택하러 내려오기까지 꽤 스크롤을 해야 했습니다. 둘 다 강조조 안 돼 있었고요. 이 모든 것을 한 방에 수정한 것입니다. 이전 후원 화면과 비교해 보세요.
 
