--- a/_posts/2011-10-12-〈레프트21〉을-그대-손-안에-―-〈레프트21〉-모바일-사.md
+++ b/_posts/2011-10-12-〈레프트21〉을-그대-손-안에-―-〈레프트21〉-모바일-사.md
@@ -102,7 +102,7 @@ tags:
 
 저희 〈레프트21〉 웹개발자들은 모바일 웹 서비스를 더 일찍 완벽하게 제공하고 싶었습니다. 하지만 몇 명 되지 않는 개발 인력과 그나마도 초보인 저희의 주관적인 역량으로는 사실 무리한 바람이었죠. 사실, 지금의 〈레프트21〉 웹사이트 역시 모든 페이지들을 모바일 페이지로 제공하지 못하고 있습니다.&nbsp;
 
-가장 주요한 페이지들이거나 통계상 방문수가 많은 인덱스(첫 화면), 기사보기, 전체기사 목록, 전체 온라인 기사/온라인 독자편지 목록, 정기구독, 후원하기 &#8211; 여섯 개 페이지의 모바일 뷰만을 우선 제공할 수 밖에 없었습니다.
+가장 주요한 페이지들이거나 통계상 방문수가 많은 인덱스(첫 화면), 기사보기, 전체기사 목록, 전체 온라인 기사/온라인 독자편지 목록, 정기구독, 후원하기 - 여섯 개 페이지의 모바일 뷰만을 우선 제공할 수 밖에 없었습니다.
 
 이제 저희는 잠시 나머지 과제들을 할 일 목록에 넣어두고, 또 다른 개발 프로젝트에 들어갑니다. 그동안 〈레프트21〉 웹사이트를 모바일로도 많이 애용해 주시고요, 불편함이 있으시다면 언제든지 의견 주시면 감사하겠습니다~
 
