--- a/_posts/2012-06-16-검색을-개선했습니다-검색창-커서-사라지는-현상-없.md
+++ b/_posts/2012-06-16-검색을-개선했습니다-검색창-커서-사라지는-현상-없.md
@@ -1,6 +1,6 @@
 ---
 id: 311
-title: '검색을 개선했습니다 &#8211; 검색창 커서 사라지는 현상 없앰, 새로고침해도 화면 유지, 구글의 시간순 검색 사용, 이미지 검색'
+title: '검색을 개선했습니다 - 검색창 커서 사라지는 현상 없앰, 새로고침해도 화면 유지, 구글의 시간순 검색 사용, 이미지 검색'
 date: 2012-06-16T14:32:01+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -36,7 +36,7 @@ tags:
 
 ## 검색어를 치다가 커서가 사라지는 현상을 없앴습니다
 
-예전에는 검색창이 완전히 로딩될 때까지 시간이 걸렸습니다. 기억하실지 모르겠는데, 처음에 웹사이트에 들어오면 &#8220;기본 검색&#8221;으로 세팅돼 있다가 &#8220;구글 검색&#8221;으로 바뀌게 돼 있었습니다. 그래서 검색창에 검색어를 치다 보면 갑자기 커서가 사라지는 일도 종종 벌어졌습니다.
+예전에는 검색창이 완전히 로딩될 때까지 시간이 걸렸습니다. 기억하실지 모르겠는데, 처음에 웹사이트에 들어오면 “기본 검색”으로 세팅돼 있다가 “구글 검색”으로 바뀌게 돼 있었습니다. 그래서 검색창에 검색어를 치다 보면 갑자기 커서가 사라지는 일도 종종 벌어졌습니다.
 
 <p style="text-align: center; clear: none; float: none; ">
   <div style="width: 332px" class="wp-caption aligncenter">
