--- a/_posts/2013-01-25-레프트21-epub-다운로드-서비스-시작.md
+++ b/_posts/2013-01-25-레프트21-epub-다운로드-서비스-시작.md
@@ -11,9 +11,9 @@ tistory_id:
 categories:
   - 사이트 이용안내
 ---
-[&#8216;레프트21 EPUB 다운로드 서비스를 중단합니다&#8217;](http://work.local/webmaster/archives/330 "레프트21 EPUB 다운로드 서비스를 중단합니다")를 참고하세요.
+[‘레프트21 EPUB 다운로드 서비스를 중단합니다’](http://work.local/webmaster/archives/330 "레프트21 EPUB 다운로드 서비스를 중단합니다")를 참고하세요.
 
-&#8212;&#8212;
+——
 
 전자책 시장이 성장하고 있습니다. 전자책 단말기 덕분이 아닙니다. 아이패드로 시작된 태블릿PC 열풍 덕분입니다. 전자책은 이제 한국 전체 도서 매출의 2%를 차지할 정도로 성장했습니다.
 
@@ -33,7 +33,7 @@ categories:
 
 데스크탑과 태블릿에선 저렇게 다운을 받으면 됩니다.
 
-지난 호를 다운받으려면, &#8216;지난 호 목록&#8217;에 가서 원하는 신문을 누른 다음 좌측을 살펴 보면 됩니다.
+지난 호를 다운받으려면, ‘지난 호 목록’에 가서 원하는 신문을 누른 다음 좌측을 살펴 보면 됩니다.
 
 <p style="text-align: center; clear: none; float: none;">
   <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile24.uf.1446D633510292C01A91AA.png" width="361" height="293" />
@@ -43,7 +43,7 @@ categories:
 
 ## 스마트폰에서 다운받기
 
-이미지들을 참고하셔야 합니다. 우선 &#8216;최신호 PDF&#8217;를 누릅니다.
+이미지들을 참고하셔야 합니다. 우선 ‘최신호 PDF’를 누릅니다.
 
 <p style="text-align: center; clear: none; float: none;">
   <img class="aligncenter" alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile10.uf.243B0E3E51027EB80D1207.png" width="300" height="532" />
@@ -55,7 +55,7 @@ categories:
   <img alt="" src="http://work.local/webmaster/wp-content/uploads/1/cfile27.uf.20211C4251027EFA3ADAA6.png" width="300" height="532" />
   
   <p class="wp-caption-text">
-    위 그림에서 &#8216;지난호·제휴자료&#8217;를 누르면 역시 지난 호 목록 페이지로 가게 됩니다.
+    위 그림에서 ‘지난호·제휴자료’를 누르면 역시 지난 호 목록 페이지로 가게 됩니다.
   </p>
 </div>
 
