--- a/_posts/2013-03-07-검색-기능이-개선됐습니다.md
+++ b/_posts/2013-03-07-검색-기능이-개선됐습니다.md
@@ -11,16 +11,16 @@ tistory_id:
 categories:
   - 사이트 이용안내
 ---
-레프트21 웹사이트는 종이 신문의 온라인 판인 동시에 풍부한 자료의 보고이기도 합니다. 물론 자료가 그저 많기만 하다고 해서 &#8216;자료의 보고&#8217;라고 할 수는 없습니다. 사용자가 원하는 자료를 쉽게 찾을 수도 있어야 합니다. 그런 점에서 검색 기능은 레프트21에서 매우 중요한 기능입니다. 
+레프트21 웹사이트는 종이 신문의 온라인 판인 동시에 풍부한 자료의 보고이기도 합니다. 물론 자료가 그저 많기만 하다고 해서 ‘자료의 보고’라고 할 수는 없습니다. 사용자가 원하는 자료를 쉽게 찾을 수도 있어야 합니다. 그런 점에서 검색 기능은 레프트21에서 매우 중요한 기능입니다. 
 
 레프트21에서는 구글이 제공하는 맞춤 검색 서비스 덕에 훌륭한 검색 결과를 얻을 수 있었습니다. 맞춤 검색 서비스는 검색어와 관련성이 높은 기사들을 먼저 보여주기 때문입니다.
 
 ## 기존 검색에서 아쉬웠던 점들  
 
 
-그러나 검색어가 아니라 날짜나 저자와 같은 다른 여러가지 기준으로는 검색을 할 수 없었습니다. 물론 검색 결과 페이지에서 &#8216;날짜&#8217;를 기준으로 검색 결과를 정렬하는 버튼이 있기는 했지만, &#8216;날짜&#8217;를 기준으로 정렬하면 관련성은 아예 무시되기 때문에, 특정 시기의 기사를 찾으려면 관련성이 떨어지는 결과 사이에서 원하는 기사를 찾아 헤매야 했습니다.
+그러나 검색어가 아니라 날짜나 저자와 같은 다른 여러가지 기준으로는 검색을 할 수 없었습니다. 물론 검색 결과 페이지에서 ‘날짜’를 기준으로 검색 결과를 정렬하는 버튼이 있기는 했지만, ‘날짜’를 기준으로 정렬하면 관련성은 아예 무시되기 때문에, 특정 시기의 기사를 찾으려면 관련성이 떨어지는 결과 사이에서 원하는 기사를 찾아 헤매야 했습니다.
 
-예를 들어 &#8216;민영화&#8217;로 검색을 하면 아래와 같이 사이트 우측 상단에 있는 《KTX:**민영화**: 재앙의 신호탄 &#8211; 정치적 분석과 투쟁 방향》을 홍보하는 문구가 검색에 잡힙니다. 
+예를 들어 ‘민영화’로 검색을 하면 아래와 같이 사이트 우측 상단에 있는 《KTX:**민영화**: 재앙의 신호탄 - 정치적 분석과 투쟁 방향》을 홍보하는 문구가 검색에 잡힙니다. 
 
 <p style="text-align: center; clear: none; float: none;">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile2.uf.20654F5051382C103D5019.jpg" class="aligncenter" width="330" height="300" filename="sidebar.jpg" filemime="image/jpeg" />
@@ -56,13 +56,13 @@ categories:
 
 
 
-날짜 검색 기능은 검색 결과 페이지에서 사용할 수 있습니다. 검색 결과 상단에 있는 &#8220;상세 검색 펼치기&#8221;를 누르면, 날짜 검색을 위한 입력 양식이 나타납니다.
+날짜 검색 기능은 검색 결과 페이지에서 사용할 수 있습니다. 검색 결과 상단에 있는 “상세 검색 펼치기”를 누르면, 날짜 검색을 위한 입력 양식이 나타납니다.
 
 <p style="text-align: center; clear: none; float: none;">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile9.uf.0279354E51382CBD262851.jpg" class="aligncenter" width="583" height="181" filename="apiSearch-ctrl.jpg" filemime="image/jpeg" />
 </p>
 
-날짜를 입력하고 &#8216;검색하기&#8217; 버튼을 누르면 정해진 기간에 나온 기사만 검색됩니다. &#8216;부터&#8217;에만 입력하면 오늘까지로, &#8216;까지&#8217;에만 입력하면 기간은 1980년 1월 1일부터로 검색됩니다.
+날짜를 입력하고 ‘검색하기’ 버튼을 누르면 정해진 기간에 나온 기사만 검색됩니다. ‘부터’에만 입력하면 오늘까지로, ‘까지’에만 입력하면 기간은 1980년 1월 1일부터로 검색됩니다.
 
 날짜는 다음과 같은 방법으로 입력할 수 있습니다.
 
@@ -95,15 +95,15 @@ categories:
             2010년 10월 4일
     
 
-&#8220;97&#8221;년, &#8220;05&#8221;년쳐럼 두자리로 년도를 입력하면 자동으로 &#8220;1997&#8221;년, &#8220;2005&#8221;년으로 변환됩니다.
+“97”년, “05”년쳐럼 두자리로 년도를 입력하면 자동으로 “1997”년, “2005”년으로 변환됩니다.
 
             97년 1월 1일 → 1997-01-01
             05년 1월 1일 → 2005-01-01
     
 
-현재는 &#8220;50&#8221;을 기준으로 그보다 크면 1900, 그보다 작으면 2000을 더합니다.
+현재는 “50”을 기준으로 그보다 크면 1900, 그보다 작으면 2000을 더합니다.
 
-한편 년, 월, 일을 모두 입력하지 않아도 됩니다. 빠진 항목은 자동으로 채워줍니다. &#8216;부터&#8217; 란에서는 시작일로, &#8216;까지&#8217;란에서는 마지막 날로 자동으로 채워집니다. 예:
+한편 년, 월, 일을 모두 입력하지 않아도 됩니다. 빠진 항목은 자동으로 채워줍니다. ‘부터’ 란에서는 시작일로, ‘까지’란에서는 마지막 날로 자동으로 채워집니다. 예:
 
             <부터>
                     2013    → 2013-01-01
@@ -120,13 +120,13 @@ categories:
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile23.uf.0108F95051382D6C0491C5.jpg" class="aligncenter" width="300" height="44" filename="apiSearch-byDate-sanitize1.jpg" filemime="image/jpeg" />
 </p>
 
-‘부터&#8217; 란에 2010만 입력합니다.
+‘부터’ 란에 2010만 입력합니다.
 
 <p style="text-align: center; clear: none; float: none;">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile25.uf.126CBA4D51382D8B16E05A.jpg" class="aligncenter" width="291" height="48" filename="apiSearch-byDate-sanitize2.jpg" filemime="image/jpeg" />
 </p>
 
-입력란에서 나오면 2010이 자동으로 2010-01-01로 바뀝니다. &#8216;까지&#8217; 란의 경우에는 2010-12-31로 바뀝니다.
+입력란에서 나오면 2010이 자동으로 2010-01-01로 바뀝니다. ‘까지’ 란의 경우에는 2010-12-31로 바뀝니다.
 
 <p style="text-align: center; clear: none; float: none;">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile4.uf.1769F84751382DA71140C2.jpg" class="aligncenter" width="297" height="49" filename="apiSearch-byDate-sanitize3.jpg" filemime="image/jpeg" />
