--- a/_posts/2014-08-25-아이콘-닮은꼴-상징-제멋대로.md
+++ b/_posts/2014-08-25-아이콘-닮은꼴-상징-제멋대로.md
@@ -35,7 +35,7 @@ permalink: /archives/435
 
 그러나 히스토리에 쓰이는 경우 상징 아이콘이다. 히스토리와 시계는 모두 시간과 관련이 있다. 그러나 연결이 너무 약하다.
 
-## 사례2. &#8220;저장&#8221;을 나타내는 플로피 디스크 아이콘
+## 사례2. “저장”을 나타내는 플로피 디스크 아이콘
 
 처음에는 닮은꼴 아이콘이었다. 하드디스크가 널리 쓰이는 시기에도 사용자들이 직접 하드디스크를 보는 일은 드물었기 때문에 좋은 아이콘이었다.
 
