--- a/_posts/2014-09-15-alertbox-요약-검색이-있는데-내비게이션이-필요할까.md
+++ b/_posts/2014-09-15-alertbox-요약-검색이-있는데-내비게이션이-필요할까.md
@@ -1,6 +1,6 @@
 ---
 id: 439
-title: '[Alertbox 요약] &#8220;검색이 있는데 내비게이션이 필요할까?&#8221;'
+title: '[Alertbox 요약] “검색이 있는데 내비게이션이 필요할까?”'
 date: 2014-09-15T12:24:29+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -9,7 +9,7 @@ permalink: /archives/439
 ---
 원문: <http://www.nngroup.com/articles/search-not-enough>
 
-&#8220;검색이 있는데 내비게이션이 필요할까?&#8221;
+“검색이 있는데 내비게이션이 필요할까?”
 
 아닌 이유 5가지:
 
