--- a/_posts/2014-10-07-alertbox-요약-관련-콘텐츠는-제대로-보여줘야-페이지뷰를.md
+++ b/_posts/2014-10-07-alertbox-요약-관련-콘텐츠는-제대로-보여줘야-페이지뷰를.md
@@ -42,7 +42,7 @@ permalink: /archives/443
 
 ## 4 우선 순위 높은 링크를 장식적 콘텐츠 주변에 두지 마라
 
-&#8220;배너 무시&#8221;는 단지 관련성 없어 보이는 정보나 광고에만 해당하는 것이 아니다. 사용자들은 광고와 관련된 구역을 아예 보지 않는다.
+“배너 무시”는 단지 관련성 없어 보이는 정보나 광고에만 해당하는 것이 아니다. 사용자들은 광고와 관련된 구역을 아예 보지 않는다.
 
 오른쪽 사이드바에는 전통적으로 광고나 덜 중요한 정보가 들어간다. 그래서 오른쪽 사이드바에 중요한 링크를 제시하려면 거기에 광고가 있는 것처럼 보여선 안된다.
 
@@ -62,7 +62,7 @@ permalink: /archives/443
 
 NBCNews.com의 경우 From the Web과 More from NBC News라는제목을 달았는데 이것은 너무 포괄적이며 사용자들이 어떤 연관성으로 링크가 묶인 것인지 이해하기 어렵다.
 
-WashingtonPost.com의 경우 &#8216;많이 본 기사&#8217;라고 제목을 붙였는데 이것은 스포츠 섹션에 걸맞는 제목이다. 제시된 링크도 현재 기사와 주제(풋볼)가 일치한다.
+WashingtonPost.com의 경우 ‘많이 본 기사’라고 제목을 붙였는데 이것은 스포츠 섹션에 걸맞는 제목이다. 제시된 링크도 현재 기사와 주제(풋볼)가 일치한다.
 
 ## 7 키워드를 앞에 배치하라
 
