--- a/_posts/2014-10-07-alertbox-요약-주의를-끌고-이해를-돕는-애니메이션.md
+++ b/_posts/2014-10-07-alertbox-요약-주의를-끌고-이해를-돕는-애니메이션.md
@@ -33,7 +33,7 @@ permalink: /archives/442
 
 웹 페이지의 경우 시야의 주변부는 F자 패턴에서 벗어나는 곳이다. 오른편에서 깜빡거리는 이미지나 비디오 광고는 상업적 목적을 위해 주변부 시야를 활용하는 가장 흔한 예다(그리고 이것의 남용은 배너 무시나 우측 레일 무시를 낳는다). 그러나 선의로 만든 애니메이션도 신경을 분산시키고 짜증을 유발할 수 있다(클리피, 듣고 있나?). 화면의 테두리에 관련 컨텐트나 관련된 활동, 라이브 채팅을 나타나게 하는 것도 실제로는 팝업만큼 신경을 분산시키거나, 사용자가 바라지 않을 수도 있다.
 
-Olark 사이트에서는 홈페이지가 로드되자마자, 화면 우측 하단에 &#8220;How can we help?&#8221;가 미끄러져 들어오고 그 위로 바로 &#8220;Hey, We&#8217;re Olark Chart&#8221;라는 풍선이 뜬다. 사용자에게 존재감은 확실히 부각하지만, 주요 콘텐츠를 소비하는 1차적 과제에서 신경을 분산시켜버린다.
+Olark 사이트에서는 홈페이지가 로드되자마자, 화면 우측 하단에 “How can we help?”가 미끄러져 들어오고 그 위로 바로 “Hey, We’re Olark Chart”라는 풍선이 뜬다. 사용자에게 존재감은 확실히 부각하지만, 주요 콘텐츠를 소비하는 1차적 과제에서 신경을 분산시켜버린다.
 
 움직이는 물체로 주의가 옮겨지는 속도는 움직이는 대상의 활동성에 달려있다. 애니메이션의 속도나 위치 변화의 양, 가장 중요하게는 그 움직임이 스스로 추동하는 것처럼 보이는지의 여부가 이를 결정한다. 그래서 페이드나 천천히 움직이면 주의를 덜 끈다.
 
