--- a/_posts/2015-05-06-첫-화면-개편-더-시원한-사진-사용-주제별-기사-배치.md
+++ b/_posts/2015-05-06-첫-화면-개편-더-시원한-사진-사용-주제별-기사-배치.md
@@ -1,6 +1,6 @@
 ---
 id: 453
-title: '첫 화면 개편 &#8211; 더 시원한 사진 사용, 주제별 기사 배치'
+title: '첫 화면 개편 - 더 시원한 사진 사용, 주제별 기사 배치'
 date: 2015-05-06T19:31:11+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -33,7 +33,7 @@ categories:
 
 그러나 배치 순서와 제목 크기 만으로는 편집 의도를 충분히 드러내지 못하는 상황이 종종 있었습니다. 예컨대 몇 호에 걸쳐 특정 쟁점을 강조하면서도, 현재 호의 표제 기사도 함께 보여줘야 할 때가 있습니다. 또는 쟁점별로 강조의 차이가 미묘할 때도 있습니다.
 
-물론 그동안 〈노동자 연대〉 사이트는 기존 틀을 크게 바꾸지 않고도 이런 문제에 잘 대응해왔습니다. 예컨대 100호 발행 기념 주간에는 오른쪽 단에 별도 영역을 만들어서 거기에 콘텐츠를 배치했습니다. 2011년에 &#8220;아랍의 봄&#8221;이 한창일 때에는 첫 화면 상단 전체를 할애해서 배치했습니다.
+물론 그동안 〈노동자 연대〉 사이트는 기존 틀을 크게 바꾸지 않고도 이런 문제에 잘 대응해왔습니다. 예컨대 100호 발행 기념 주간에는 오른쪽 단에 별도 영역을 만들어서 거기에 콘텐츠를 배치했습니다. 2011년에 “아랍의 봄”이 한창일 때에는 첫 화면 상단 전체를 할애해서 배치했습니다.
 
 [<img class="aligncenter size-full wp-image-467" src="http://work.local/webmaster/wp-content/uploads/2015/05/100th-index1.jpg" alt="100th-index" width="600" height="350" srcset="http://work.local/webmaster/wp-content/uploads/2015/05/100th-index1.jpg 600w, http://work.local/webmaster/wp-content/uploads/2015/05/100th-index1-300x175.jpg 300w" sizes="(max-width: 600px) 100vw, 600px" />](http://work.local/webmaster/wp-content/uploads/2015/05/100th-index1.jpg)
 
@@ -97,7 +97,7 @@ categories:
 
 그래서 〈노동자 연대〉 신문이 현재 어떤 주제를 다루고 있는지, 그 주제를 다루는 기사는 무엇이 있는지가 더 정돈되어 보입니다. (모바일 화면에서는 이점이 더 두드러집니다.)
 
-가장 위에 있는 구역은 종이 신문의 1면 역할을 합니다. 이번 호에서 무엇을 강조하는지를 드러내고 어떤 기사가 있는지 길잡이 역할을 합니다. 기사 아래에 있는 &#8220;▶ 관련 기사 보기&#8221;를 누르면 관련 기사가 묶여 있는 구역으로 바로 이동합니다.
+가장 위에 있는 구역은 종이 신문의 1면 역할을 합니다. 이번 호에서 무엇을 강조하는지를 드러내고 어떤 기사가 있는지 길잡이 역할을 합니다. 기사 아래에 있는 “▶ 관련 기사 보기”를 누르면 관련 기사가 묶여 있는 구역으로 바로 이동합니다.
 
 <div id="attachment_460" style="width: 754px" class="wp-caption aligncenter">
   <a href="http://work.local/webmaster/wp-content/uploads/2015/05/paper-headline.jpg"><img class="wp-image-460 size-full" src="http://work.local/webmaster/wp-content/uploads/2015/05/paper-headline.jpg" alt="paper-headline" width="744" height="384" srcset="http://work.local/webmaster/wp-content/uploads/2015/05/paper-headline.jpg 744w, http://work.local/webmaster/wp-content/uploads/2015/05/paper-headline-300x154.jpg 300w" sizes="(max-width: 744px) 100vw, 744px" /></a>
@@ -111,7 +111,7 @@ categories:
   <a href="http://work.local/webmaster/wp-content/uploads/2015/05/headline-section.gif"><img class="size-full wp-image-461" src="http://work.local/webmaster/wp-content/uploads/2015/05/headline-section.gif" alt="첫 화면 헤드라인. &quot;▶ 관련 기사 보기&quot;를 누르면 관련 기사가 있는 곳으로 이동합니다" width="700" height="426" /></a>
   
   <p class="wp-caption-text">
-    첫 화면 헤드라인. &#8220;▶ 관련 기사 보기&#8221;를 누르면 관련 기사가 있는 곳으로 이동합니다
+    첫 화면 헤드라인. “▶ 관련 기사 보기”를 누르면 관련 기사가 있는 곳으로 이동합니다
   </p>
 </div>
 
