--- a/_posts/2015-05-17-alertbox-요약-효율성보다-사용자의-기대를-더-중시해야.md
+++ b/_posts/2015-05-17-alertbox-요약-효율성보다-사용자의-기대를-더-중시해야.md
@@ -19,7 +19,7 @@ permalink: /archives/481
   </p>
   
   <p>
-    사용성 연구에서 가장 중요한 목표는 상호작용 비용을 줄이는 것이다. 그리고 많은 이들이 작업에 드는 클릭 수를 줄이려고 애를 쓴다. 그런데 상호작용 비용은 단지 물리적 행동인 클릭수로 환원되지 않는다. 상호작용 비용에는 정신적 비용도 포함된다. 클릭수에만 집착하면 오히려 역풍을 맞게 된다. 사용자가 &#8220;비효율적&#8221;인 과정에 너무 익숙해져 있어서 그 과정을 축약하면 작업 흐름이 깨지고 역설적으로 상호작용 비용이 커진다.
+    사용성 연구에서 가장 중요한 목표는 상호작용 비용을 줄이는 것이다. 그리고 많은 이들이 작업에 드는 클릭 수를 줄이려고 애를 쓴다. 그런데 상호작용 비용은 단지 물리적 행동인 클릭수로 환원되지 않는다. 상호작용 비용에는 정신적 비용도 포함된다. 클릭수에만 집착하면 오히려 역풍을 맞게 된다. 사용자가 “비효율적”인 과정에 너무 익숙해져 있어서 그 과정을 축약하면 작업 흐름이 깨지고 역설적으로 상호작용 비용이 커진다.
   </p>
   
   <p>
@@ -38,7 +38,7 @@ permalink: /archives/481
   </p>
   
   <p>
-    인터페이스를 만들 때에는 확립된 표준을 따라야 한다. 사용자들은 이 사이트가 다른 사이트와 마찬가지로 동작할 것이라고 기대한다. 여기에서 조금이라도 벗어나면 &#8220;자동비행모드&#8221;는 종료되고 사용자는 새로운 상황에 대처하기 위해 궁리해야 한다.
+    인터페이스를 만들 때에는 확립된 표준을 따라야 한다. 사용자들은 이 사이트가 다른 사이트와 마찬가지로 동작할 것이라고 기대한다. 여기에서 조금이라도 벗어나면 “자동비행모드”는 종료되고 사용자는 새로운 상황에 대처하기 위해 궁리해야 한다.
   </p>
   
   <h2>
@@ -50,7 +50,7 @@ permalink: /archives/481
   </h3>
   
   <p>
-    Nextdoor.com의 이메일 설정 화면에는 &#8220;저장&#8221; 버튼이 없다. 컴퓨터 도사야 효율성을 위해 &#8220;저장&#8221; 버튼을 없애고 변경 사항을 바로 저장한다는 사실을 알겠지만, 사용자들은 대부분 컴퓨터 도사도 아니고 심지어 가장 높은 경지에 이른 컴퓨터 도사조차도 폼 끄트머리에 &#8220;저장&#8221; 버튼이 있을 것이라고 기대한다. 결국 생각을 더 많이 해야되고 상호작용 비용은 증가한다.
+    Nextdoor.com의 이메일 설정 화면에는 “저장” 버튼이 없다. 컴퓨터 도사야 효율성을 위해 “저장” 버튼을 없애고 변경 사항을 바로 저장한다는 사실을 알겠지만, 사용자들은 대부분 컴퓨터 도사도 아니고 심지어 가장 높은 경지에 이른 컴퓨터 도사조차도 폼 끄트머리에 “저장” 버튼이 있을 것이라고 기대한다. 결국 생각을 더 많이 해야되고 상호작용 비용은 증가한다.
   </p>
   
   <h3>
@@ -58,7 +58,7 @@ permalink: /archives/481
   </h3>
   
   <p>
-    Nextdoor.com의 이메일 설정 화면은 확립된 상호작용 패턴에서 벗어날 뿐만 아니라 컴퓨터가 정보를 저장하는 체계에 대한 일반적인 이해에도 벗어난다. 수년에 걸쳐 사용자들은 시스템에게 명시적으로 저장하라고 알려줘야 결과물을 저장한다는 사실을 학습해 왔다. 물론 저장 명령을 깜빡하는 경우는 많다(그래서 자동 저장은 이런 비극을 막는 훌륭한 기능이다). 그러나 자동 저장이 명시적인 저장을 대체할 이유는 없다. 자동 저장과 명시적인 저장은 공존할 수 있다. 폼을 사용할 때 사용자들은 &#8220;저장&#8221;이나 &#8220;적용&#8221; 버튼을 누르기 전까지는 아무것도 변하지 않는다고 이해하며 그냥 다른 페이지로 이동하거나 &#8220;취소&#8221;를 누르면 원래대로 되돌릴 수 있다고 이해한다.
+    Nextdoor.com의 이메일 설정 화면은 확립된 상호작용 패턴에서 벗어날 뿐만 아니라 컴퓨터가 정보를 저장하는 체계에 대한 일반적인 이해에도 벗어난다. 수년에 걸쳐 사용자들은 시스템에게 명시적으로 저장하라고 알려줘야 결과물을 저장한다는 사실을 학습해 왔다. 물론 저장 명령을 깜빡하는 경우는 많다(그래서 자동 저장은 이런 비극을 막는 훌륭한 기능이다). 그러나 자동 저장이 명시적인 저장을 대체할 이유는 없다. 자동 저장과 명시적인 저장은 공존할 수 있다. 폼을 사용할 때 사용자들은 “저장”이나 “적용” 버튼을 누르기 전까지는 아무것도 변하지 않는다고 이해하며 그냥 다른 페이지로 이동하거나 “취소”를 누르면 원래대로 되돌릴 수 있다고 이해한다.
   </p>
   
   <h3>
@@ -70,6 +70,6 @@ permalink: /archives/481
   </p>
   
   <p>
-    &#8220;저장&#8221; 버튼을 없앰으로서 폼은 갑자기 생명을 얻고 알아서 무엇을 언제 어떻게 할지를 결정하는 존재처럼 보이게 된다. 사용자에게 그것이 통제권 밖에 있다는 느낌을 주지 않으려면 시스템의 동작이 알아서 시작된 것이 아니라 사용자가 촉발한 것이라는 점을 분명히 보여줘야 한다. Nextdoor.com의 경우에는 변경 사항을 조용히 자동으로 저장하는 것이 아니라, 변경 사항이 저장됐다는 것을 시각적으로 표현해줘야 한다.
+    “저장” 버튼을 없앰으로서 폼은 갑자기 생명을 얻고 알아서 무엇을 언제 어떻게 할지를 결정하는 존재처럼 보이게 된다. 사용자에게 그것이 통제권 밖에 있다는 느낌을 주지 않으려면 시스템의 동작이 알아서 시작된 것이 아니라 사용자가 촉발한 것이라는 점을 분명히 보여줘야 한다. Nextdoor.com의 경우에는 변경 사항을 조용히 자동으로 저장하는 것이 아니라, 변경 사항이 저장됐다는 것을 시각적으로 표현해줘야 한다.
   </p>
 </div>
