--- a/_posts/2009-06-01-레프트21-맞춤보기-개선.md
+++ b/_posts/2009-06-01-레프트21-맞춤보기-개선.md
@@ -13,7 +13,7 @@ categories:
 ---
 몇일전 개선 했는데 보고가 늦었군요. 눈치 빠르신 분은 이미 알고 계셨으리라&#8230;
 
-인덱스 화면 우측 상단에 보시면 &#8220;레프트21 최신호&#8221;라고 되어 있는 부분이 있었습니다.
+인덱스 화면 우측 상단에 보시면 “레프트21 최신호”라고 되어 있는 부분이 있었습니다.
 
 아래 화면 보시죠. 
 
@@ -41,7 +41,7 @@ categories:
 
 이제 변경 요소와 이유를 설명드려야 겠군요.
 
-우선, 이 박스의 전체 제목이 최신호로 되어 있으나 &#8216;정기구독&#8217;, &#8216;지난호 보기&#8217;같은 최신호와 관련이 없는 것이 하위 메뉴로 있어 혼란스러워 보였어요.
+우선, 이 박스의 전체 제목이 최신호로 되어 있으나 ‘정기구독’, ‘지난호 보기’같은 최신호와 관련이 없는 것이 하위 메뉴로 있어 혼란스러워 보였어요.
 
 그래서 이에 따라 정기구독은 이 곳에서 빼기로 했고,(대신 그 위에 정기구독 배너를 더 잘 보이게 하고, E-book과 pdf를 클릭하시는 분들께 정기구독 호소 공지가 뜰 수 있게 하기로 했습니다.)
 
@@ -49,7 +49,7 @@ categories:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile24.uf.111F874C4D084707299981.jpg" width="293" height="262" alt="사용자 삽입 이미지" style="float: left;" title="" />
 
-그래서 전체 제목을 &#8220;레프트21 맞춤보기&#8221;로 정하고, 크게 세 부분으로 나뉘었습니다.
+그래서 전체 제목을 “레프트21 맞춤보기”로 정하고, 크게 세 부분으로 나뉘었습니다.
 
 첫번째 보이는 항목은 최신호를 각종 방식으로 볼 수 있는 부분입니다. 가장 강조되어 있죠.
 
@@ -57,6 +57,6 @@ categories:
 
 세번째에 전체보기와 온라인기사만 보기를 추가 했습니다. 전체보기는 인덱스 맨 하단으로 내려가 사이트맵 구조로 되어 있는 부분에서만 이용할 수 있었는데, 잘 모르시는 분들이 많을 것 같아 이곳에도 같이 두게되었죠.
 
-온라인만 보기는 웹마스터 블로그에 &#8216;도봉구정기구독자&#8217;님께서 제안해주신 건데, 지면으로 보는 독자들은 온라인 글 만 있는 페이지가 있다면 더 편리하실 거라 제안 하셔서 이번에 반영하게 되었습니다. 녹풍님이 며칠전에 이 페이지를 따로 만들어 주셨드랬죠.
+온라인만 보기는 웹마스터 블로그에 ‘도봉구정기구독자’님께서 제안해주신 건데, 지면으로 보는 독자들은 온라인 글 만 있는 페이지가 있다면 더 편리하실 거라 제안 하셔서 이번에 반영하게 되었습니다. 녹풍님이 며칠전에 이 페이지를 따로 만들어 주셨드랬죠.
 
 이상입니다. 더 궁금한게 있으시면 댓글 환영합니다.^^
