--- a/_posts/2009-06-03-레프트21-검색기능-개선-제한적인유의어-자동-검색.md
+++ b/_posts/2009-06-03-레프트21-검색기능-개선-제한적인유의어-자동-검색.md
@@ -1,6 +1,6 @@
 ---
 id: 85
-title: '레프트21 검색기능 개선 &#8211; (제한적인)유의어 자동 검색'
+title: '레프트21 검색기능 개선 - (제한적인)유의어 자동 검색'
 date: 2009-06-03T13:49:29+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -21,7 +21,7 @@ tags:
 
 ### 유의어 자동 검색??
 
-글을 쓰다보니 검색기능에 대한 욕심도 마구 생기네요..ㅎ 아무튼 저희가 구현한 &#8216;유의어 자동 검색&#8217;은 우리 신문에서 자주 검색되는 단어들 중 외래어이다보니 예전에 쓰던 말과 달라진 단어들을 자동으로 함께 검색할 수 있도록 한 기능입니다. 대표적으로는 맑스와 마르크스입니다. 두 단어 모두 지금도 자주 쓰이나 같은 의미이죠. 더군다나 예전의 자료들과 지금의 자료들에서 사용하는 용어의 일관성도 완벽하지 않으니, 한 단어만 입력했더라도 <span style="font-weight: bold;">두 단어를</span> and조건 검색이 아닌 <span style="font-weight: bold;">or조건으로 자동 검색</span>되도록 하였습니다. 아래에 맑스를 검색한 결과를 보실 수가 있습니다. 
+글을 쓰다보니 검색기능에 대한 욕심도 마구 생기네요..ㅎ 아무튼 저희가 구현한 ‘유의어 자동 검색’은 우리 신문에서 자주 검색되는 단어들 중 외래어이다보니 예전에 쓰던 말과 달라진 단어들을 자동으로 함께 검색할 수 있도록 한 기능입니다. 대표적으로는 맑스와 마르크스입니다. 두 단어 모두 지금도 자주 쓰이나 같은 의미이죠. 더군다나 예전의 자료들과 지금의 자료들에서 사용하는 용어의 일관성도 완벽하지 않으니, 한 단어만 입력했더라도 <span style="font-weight: bold;">두 단어를</span> and조건 검색이 아닌 <span style="font-weight: bold;">or조건으로 자동 검색</span>되도록 하였습니다. 아래에 맑스를 검색한 결과를 보실 수가 있습니다. 
 
 <div style="width: 570px" class="wp-caption aligncenter">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile6.uf.13291D4E4D084708064A52.jpg" width="560" height="272" alt="사용자 삽입 이미지" />
@@ -29,7 +29,7 @@ tags:
   <p class="wp-caption-text">
     유의어 단어 검색의
   </p>
-</div>이 외에 &#8216;트로츠키&#8217;도 옛말인 &#8216;뜨로츠키&#8217;, &#8216;뜨로츠끼&#8217;와 함께 검색이 되구요, 그람시도 옛말과 함께 검색하도록 했습니다. 레프트21의 검색엔진에 등록된 유의어는 이 정돕니다. 그렇다면 이 세가지 유의어중 하나와 유의어로 등록되지 않은 단어와 함께 검색했을 경우 어떻게 엔진이 작동할 까요? 
+</div>이 외에 ‘트로츠키’도 옛말인 ‘뜨로츠키’, ‘뜨로츠끼’와 함께 검색이 되구요, 그람시도 옛말과 함께 검색하도록 했습니다. 레프트21의 검색엔진에 등록된 유의어는 이 정돕니다. 그렇다면 이 세가지 유의어중 하나와 유의어로 등록되지 않은 단어와 함께 검색했을 경우 어떻게 엔진이 작동할 까요? 
 
 <span style="font-weight: bold;">자본주의와 맑스를 함께 검색했다고 가정</span>하겟습니다. 이 경우 수식으로 쓴다면,</p> 
 
@@ -39,6 +39,6 @@ tags:
   </p>
 </div>
 
-풀어서 말하면 &#8216;자본주의&#8217;는 반드시 포함되면서 &#8216;맑스&#8217; 나 &#8216;마르크스&#8217;&nbsp; 중 적어도 하나이상도 함께 포함되어 있는 문서를 검색하게 됩니다. 즉 자본주의만 포함되어 있어나 &#8216;맑스&#8217; 또는 &#8216;마르크스&#8217;중 하나만 포함되어 있거나 또는 &#8216;자본주의&#8217;는 포함되어있지 않은 문서는 제외되게 됩니다. 왜냐하면 기본 검색 시스템이 and조건 검색이기 때문이죠.
+풀어서 말하면 ‘자본주의’는 반드시 포함되면서 ‘맑스’ 나 ‘마르크스’&nbsp; 중 적어도 하나이상도 함께 포함되어 있는 문서를 검색하게 됩니다. 즉 자본주의만 포함되어 있어나 ‘맑스’ 또는 ‘마르크스’중 하나만 포함되어 있거나 또는 ‘자본주의’는 포함되어있지 않은 문서는 제외되게 됩니다. 왜냐하면 기본 검색 시스템이 and조건 검색이기 때문이죠.
 
 복잡한 알고리즘이 없기 때문에 이정도만 알면 레프트21의 검색기능을 파악하실 수 있겠죠? 조금이나마 도움이 되셨으면 좋겠습니다. 다만 좀더 고급검색을 원하시는 분은 <a href="http://work.local/webmaster/webmaster/14" target="_blank" title="더 효과적으로 검색기능을 활용하자!" class="broken_link">구글맞춤검색</a>을 활용하시기 바랍니다.
