--- a/_posts/2009-11-07-구글-검색을-기본으로-설정했습니다.md
+++ b/_posts/2009-11-07-구글-검색을-기본으로-설정했습니다.md
@@ -42,8 +42,8 @@ tags:
 그러나 구글 검색의 장점은 기본 검색을 상회합니다.
 
   1. 속도가 빠릅니다. 구글 검색은 거의 엔터를 치는 동시에 검색 결과가 뜹니다.
-  2. 정확도가 뛰어납니다. 고전적인 예시인 &#8216;의사 파업&#8217;으로 검색해 보세요. 구글 검색은 의사들이 파업한 것을 정확히 맨 위에 띄워 줍니다.
-  3. 유사어 분석도 됩니다. 예컨대, &#8216;고대&#8217;로 검색하면 &#8216;고려대학교&#8217;도 검색해 줍니다. (기본 검색에서도 물론 대표적인 것들은 처리를 했습니다. 그러나 모든 유사어를 이런 식으로 처리하는 것은 좀 감당하기 힘든 면이 있습니다.)
+  2. 정확도가 뛰어납니다. 고전적인 예시인 ‘의사 파업’으로 검색해 보세요. 구글 검색은 의사들이 파업한 것을 정확히 맨 위에 띄워 줍니다.
+  3. 유사어 분석도 됩니다. 예컨대, ‘고대’로 검색하면 ‘고려대학교’도 검색해 줍니다. (기본 검색에서도 물론 대표적인 것들은 처리를 했습니다. 그러나 모든 유사어를 이런 식으로 처리하는 것은 좀 감당하기 힘든 면이 있습니다.)
 
 <div style="width: 570px" class="wp-caption aligncenter">
   <img src="http://work.local/webmaster/wp-content/uploads/1/cfile27.uf.187FC6564D0847244E465D.jpg" width="560" height="277" alt="고려대학교로 검색하면 고대도 검색에 잡힙니다." />
@@ -61,7 +61,7 @@ tags:
 
 ## 자바스크립트와 사용성
 
-이번에 변화를 주면서 신경쓴 점은 &#8216;겸손한 자바스크립트&#8217; 정신입니다.
+이번에 변화를 주면서 신경쓴 점은 ‘겸손한 자바스크립트’ 정신입니다.
 
 겸손한 자바스크립트가 뭔지는 다음 링크를 참고하세요 :&nbsp;[ClearBoth, 겸손한 자바스크립트의 원리](http://www.clearboth.org/wiki/doku.php?id=reference:opera-wsc:43_the_principles_of_unobtrusive_javascript){.broken_link}
 
@@ -73,7 +73,7 @@ tags:
 
 <레프트21>을, 이명박의 공안 탄압이 무서워서 프록시로 접속하는 사람들이 있더라도(보통은 프록시로 접속하면 자바스크립트가 꺼집니다) 기본적으로는 이용할 수 있도록 해야 한다는 것이죠.
 
-그런데 이번 변화와 &#8216;겸손한 자바스크립트&#8217;가 어떤 관계냐?
+그런데 이번 변화와 ‘겸손한 자바스크립트’가 어떤 관계냐?
 
 간단합니다. 구글 맞춤 검색에 자바스크립트를 사용하기 때문입니다. (구글 맞춤 검색은 Ajax라는 기술뭉치를 이용하는데, 여기서 핵심 중 하나가 자바스크립트입니다.)
 
