--- a/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
+++ b/_posts/2009-12-22-구글-검색으로-레프트21-검색하기.md
@@ -43,9 +43,9 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile1.uf.2024D6504D08473C0C96B5.png" class="aligncenter" width="580" height="520" alt="" />
 
-일단 맨 위에 &#8216;신자유주의&#8217;라는 검색어를 보세요. site:left21.com/article 이라는 단어가 없습니다. 그런데도 left21.com의 기사들만 검색됩니다. 제가 옵션을 줬기 때문에 그렇습니다.
+일단 맨 위에 ‘신자유주의’라는 검색어를 보세요. site:left21.com/article 이라는 단어가 없습니다. 그런데도 left21.com의 기사들만 검색됩니다. 제가 옵션을 줬기 때문에 그렇습니다.
 
-&#8216;신자유주의&#8217;라는 검색어 바로 아래쪽에 보면 &#8216;검색 left21.com&#8217;이라는 단어가 보이죠. 레프트21에서만 검색한다는 얘깁니다.
+‘신자유주의’라는 검색어 바로 아래쪽에 보면 ‘검색 left21.com’이라는 단어가 보이죠. 레프트21에서만 검색한다는 얘깁니다.
 
 오른쪽에 보시면 기사에 포함된 사진을 볼 수 있고요.
 
@@ -55,7 +55,7 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile5.uf.112163504D08473C19B11C.png" class="aligncenter" width="580" height="403" alt="" />
 
-신자유주의와 연도를 짬뽕해서 검색해 줍니다. 위 그림은 1960~1979년 사이 신자유주의와 연관된 것을 검색한 결과인 것이죠. 마가렛 대처는 1979년에 권력을 잡았군요. 1973년에는 아랍에서 전쟁이 있었네요. 1979년 4월에는 긴축정책 등을 골자로 한 &#8216;경제 안정화정책&#8217;을 추구했군요.
+신자유주의와 연도를 짬뽕해서 검색해 줍니다. 위 그림은 1960~1979년 사이 신자유주의와 연관된 것을 검색한 결과인 것이죠. 마가렛 대처는 1979년에 권력을 잡았군요. 1973년에는 아랍에서 전쟁이 있었네요. 1979년 4월에는 긴축정책 등을 골자로 한 ‘경제 안정화정책’을 추구했군요.
 
 이 정도가 위 검색창으로 검색해 나온 결과를 활용할 수 있는 부분인 것 같습니다. 구글의 정확한 검색 결과와 기능을 사용하면 원하는 것을 더 빨리, 정확하게 찾을 수 있을 거라 생각합니다.
 
