--- a/_posts/2010-01-07-링크-설명툴팁을-제깍제깍-뜨게-만들다.md
+++ b/_posts/2010-01-07-링크-설명툴팁을-제깍제깍-뜨게-만들다.md
@@ -19,19 +19,19 @@ tags:
 
 <a href="http://work.local/webmaster/82" target="_blank" title="[http://work.local/webmaster/82]로 이동합니다." class="broken_link">▶툴팁 반응속도개선 ― 반응속도를 예전으로 되돌린 이유</a>
 
-&#8212;&#8212;&#8212;&#8212;&#8212;&#8212;&#8211; 아래는 처음 썼던 글입니다 &#8212;&#8212;&#8212;&#8212;&#8212;&#8211;
+——————- 아래는 처음 썼던 글입니다 —————-
 
 링크 위에 마우스를 올려놓을 경우 작은 박스가 뜨면서 설명이 나오는 걸 보신 적이 있을 겁니다. 아래 그림처럼 말입니다. 이런 걸 툴팁이라고 합니다.
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile29.uf.1221B2474D08473F2C1343.jpg" class="aligncenter" width="435" height="229" alt="" />
 
-“‘저출산 극복 대회’ &#8211; 여성이 애 낳는 도…” 까지만 제목이 나와 있죠. 첫 화면에 긴 제목을 모두 담을 수 없기 때문에 일정 글자수가 넘으면 자르는 것입니다. 그러나 실제 제목이 뭔지 궁금하겠죠. 그래야 글을 읽을지 말지 결정할 수가 있으니까 말입니다. 마우스를 올려 놓으면 위처럼 풀 제목이 뜹니다. 전체 제목은 “[이화여대에서 열린 ‘저출산 극복 대회’를 보고] 여성이 애 낳는 도구인가?” 네요.
+“‘저출산 극복 대회’ - 여성이 애 낳는 도…” 까지만 제목이 나와 있죠. 첫 화면에 긴 제목을 모두 담을 수 없기 때문에 일정 글자수가 넘으면 자르는 것입니다. 그러나 실제 제목이 뭔지 궁금하겠죠. 그래야 글을 읽을지 말지 결정할 수가 있으니까 말입니다. 마우스를 올려 놓으면 위처럼 풀 제목이 뜹니다. 전체 제목은 “[이화여대에서 열린 ‘저출산 극복 대회’를 보고] 여성이 애 낳는 도구인가?” 네요.
 
 그런데 한 가지 단점이 있었습니다. 바로 0.5초 정도 딜레이가 있다는 거예요. 마우스를 올려놓고 0.5초 정도 지나야 툴팁이 뜬다는 거죠. 그래서 어떤 사용자들은 툴팁이 제공되는지 모르고 있었을 지도 몰라요. 이게 좀 마음에 걸렸었죠.
 
 그래서 마우스를 올리자마자 툴팁이 뜨도록 했습니다.
 
-생각을 했었지만 실행을 못 하다가 최근에 실행하게 된 이유가 있습니다. 바로 《마르크스21》 기사를 레프트21에 올리게 되면서입니다. 《마르크스21》은 계간지죠. 글이 길고 주석도 많이 달려 있습니다. 웹마스터로서 서비스 정신(?)을 발휘하여 모든 각주에 툴팁을 달았던 것입니다. 아래처럼 말이죠. 이라고 써 있는 조그만 부분에 마우스를 올려 놓으면 각주가 툴팁박스로 뜹니다.&#8221;]
+생각을 했었지만 실행을 못 하다가 최근에 실행하게 된 이유가 있습니다. 바로 《마르크스21》 기사를 레프트21에 올리게 되면서입니다. 《마르크스21》은 계간지죠. 글이 길고 주석도 많이 달려 있습니다. 웹마스터로서 서비스 정신(?)을 발휘하여 모든 각주에 툴팁을 달았던 것입니다. 아래처럼 말이죠. 이라고 써 있는 조그만 부분에 마우스를 올려 놓으면 각주가 툴팁박스로 뜹니다.”]
 
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile8.uf.117DB0524D08473F2D7F00.jpg" width="553" height="227" alt="각주에 마우스 올려놓은 경우" /> 
@@ -52,4 +52,4 @@ tags:
 
 
 
-어떻게 만들었는지 궁금한 분은 &#8216;<a href="http://mytory.textcube.com/entry/jQuery-%ED%88%B4%ED%8C%81-%ED%94%8C%EB%9F%AC%EA%B7%B8%EC%9D%B8-%EB%A7%88%EC%9A%B0%EC%8A%A4-%EC%98%AC%EB%A6%AC%EB%A9%B4-%EC%84%A4%EB%AA%85%EC%9D%B4-%EB%82%98%EC%98%A4%EA%B2%8C-%ED%95%B4-%EC%A3%BC%EB%8A%94-%ED%94%8C%EB%9F%AC%EA%B7%B8%EC%9D%B8" target="_blank">jQuery 툴팁 플러그인 &#8211; 마우스 올리면 설명이 나오게 해 주는 플러그인</a>&#8216;을 읽어 보시면 됩니다.
+어떻게 만들었는지 궁금한 분은 ‘<a href="http://mytory.textcube.com/entry/jQuery-%ED%88%B4%ED%8C%81-%ED%94%8C%EB%9F%AC%EA%B7%B8%EC%9D%B8-%EB%A7%88%EC%9A%B0%EC%8A%A4-%EC%98%AC%EB%A6%AC%EB%A9%B4-%EC%84%A4%EB%AA%85%EC%9D%B4-%EB%82%98%EC%98%A4%EA%B2%8C-%ED%95%B4-%EC%A3%BC%EB%8A%94-%ED%94%8C%EB%9F%AC%EA%B7%B8%EC%9D%B8" target="_blank">jQuery 툴팁 플러그인 - 마우스 올리면 설명이 나오게 해 주는 플러그인</a>‘을 읽어 보시면 됩니다.
