--- a/_posts/2010-01-27-다함께가-주최하는-포럼-슬라이드.md
+++ b/_posts/2010-01-27-다함께가-주최하는-포럼-슬라이드.md
@@ -45,9 +45,9 @@ tags:
 
 또 하나 자랑(?)할 만한 일이 있습니다. 포럼 슬라이드에 나오는 정보는 레프트21 홈페이지에 저장된 것이 아닙니다. 포럼 홈페이지에서 제공하는 정보를 받아서 그 때 그 때 뿌려 주는 것이죠. <a href="http://feeds.feedburner.com/marxism" target="_blank">포럼 RSS</a>를 활용한 것입니다. RSS는 실시간으로 최신 정보를 업데이트해 주기 때문에, <레프트21>쪽에서는 따로 입력해줄 것 없이 그냥 만들어 두면 역시 실시간으로 계속 정보가 업데이트되는 것입니다.
 
-이런 것을 &#8216;원 소스 멀티 유스&#8217;라고 말합니다. 데이터는 한 군데만 저장되 있는데 여러 곳에서 그걸 활용할 수 있는 것이죠. 보통 언론사에서 &#8216;원 소스 멀티 유스&#8217;라고 하면 기사를 다 모아놓은 데이터베이스가 있고, 그걸 휴대폰에도 뿌려 주고, 웹에도 뿌려 주고, 오프라인 인쇄를 할 때도 사용하고 그렇게 하는 겁니다.
+이런 것을 ‘원 소스 멀티 유스’라고 말합니다. 데이터는 한 군데만 저장되 있는데 여러 곳에서 그걸 활용할 수 있는 것이죠. 보통 언론사에서 ‘원 소스 멀티 유스’라고 하면 기사를 다 모아놓은 데이터베이스가 있고, 그걸 휴대폰에도 뿌려 주고, 웹에도 뿌려 주고, 오프라인 인쇄를 할 때도 사용하고 그렇게 하는 겁니다.
 
-그럼 자료관리를 하기가 아주 편한 거죠. 만약 기사 오타가 하나 났다고 칩시다. 만약 &#8216;원 소스 멀티 유스&#8217; 방식에 따라 데이터를 한 곳에만 저장한 게 아니라, 신문 따로 웹 따로 핸드폰 따로 이렇게 데이터를 저장했다면, 오타가 발견됐을 때 세 곳에 있는 담당자에게 모두 전화를 해서 오타를 고치라고 해야 할 것입니다. 하지만 &#8216;원 소스 멀티 유스&#8217; 방식으로 데이터가 저장돼 있다면 데이터가 저장돼 있는 한 곳에서만 오타를 수정하면 되는 것이죠. 그러면 그 데이터를 활용해 서비스하는 곳의 내용은 모두 자동으로 수정되는 것입니다.
+그럼 자료관리를 하기가 아주 편한 거죠. 만약 기사 오타가 하나 났다고 칩시다. 만약 ‘원 소스 멀티 유스’ 방식에 따라 데이터를 한 곳에만 저장한 게 아니라, 신문 따로 웹 따로 핸드폰 따로 이렇게 데이터를 저장했다면, 오타가 발견됐을 때 세 곳에 있는 담당자에게 모두 전화를 해서 오타를 고치라고 해야 할 것입니다. 하지만 ‘원 소스 멀티 유스’ 방식으로 데이터가 저장돼 있다면 데이터가 저장돼 있는 한 곳에서만 오타를 수정하면 되는 것이죠. 그러면 그 데이터를 활용해 서비스하는 곳의 내용은 모두 자동으로 수정되는 것입니다.
 
 마찬가지죠. 다함께가 주최하는 포럼의 데이터에 대해 <레프트21> 관리자는 신경쓸 필요가 없습니다. 그 쪽에서 포럼 내용을 갱신하면 <레프트21> 쪽에서도 갱신되니까요. 그 쪽에서 공개 제공하는 데이터(RSS)를 사용하기 때문에 가능한 일입니다.
 
@@ -61,6 +61,6 @@ tags:
 
 예컨대, 포럼 정보를 눈으로 보고 수동으로 입력하는 식으로 제가 포럼 슬라이드를 만들었다면 앞으로 포럼 정보를 일일이 손으로 긁어 입력하느라 누군가는 고생해야 했을 것입니다.
 
-슬라이드처리되게 하면서 원칙없이 &#8216;예뻐 보이니까&#8217;라는 기준으로 일을 처리했다면 아마도 웹사이트는 일관성 없이 따로노는 공간으로만 구성된 그런 곳이 될지도 모르는 일입니다.
+슬라이드처리되게 하면서 원칙없이 ‘예뻐 보이니까’라는 기준으로 일을 처리했다면 아마도 웹사이트는 일관성 없이 따로노는 공간으로만 구성된 그런 곳이 될지도 모르는 일입니다.
 
 그럼, 앞으로도 노력하는 웹마스터 되겠습니다. ^^
