--- a/_posts/2010-02-08-기사-보다가-그-기사가-실린-호수로-바로-가기.md
+++ b/_posts/2010-02-08-기사-보다가-그-기사가-실린-호수로-바로-가기.md
@@ -30,6 +30,6 @@ tags:
 
 기사 하단에 이게 어떤 매체 몇 호에 실린 건지 나오는 부분이 있죠. 거기에 있는 매체명을 클릭하면 해당 호수에 실린 모든 기사를 보실 수 있습니다.
 
-검색할 때, 이 기사가 어떤 정국에서 실린 건지 궁금할 때가 있잖아요? 그럼 저 링크를 누르시면 되는 거죠. 그러면 &#8216;아, 홍세화의 전교조 공무원노조 방어 기사는 2004년 총선을 앞두고 실린 거구나. 맞아. 그 때 공무원노조가 민주노동당 공개 지지를 표명하면서 정부가 탄압을 했었지.&#8217; 하는 생각을 할 수 있게 되는 것이죠.
+검색할 때, 이 기사가 어떤 정국에서 실린 건지 궁금할 때가 있잖아요? 그럼 저 링크를 누르시면 되는 거죠. 그러면 ‘아, 홍세화의 전교조 공무원노조 방어 기사는 2004년 총선을 앞두고 실린 거구나. 맞아. 그 때 공무원노조가 민주노동당 공개 지지를 표명하면서 정부가 탄압을 했었지.’ 하는 생각을 할 수 있게 되는 것이죠.
 
 그럼, 편리하게 사용하시기 바랍니다. ^^
