--- a/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
+++ b/_posts/2010-03-01-ie6-사망선고-운동에-동참하며.md
@@ -16,7 +16,7 @@ tags:
   - 인터넷 익스플로러
   - 인터넷 익스플로러6
 ---
-인터넷 익스플로러, 많은 분들이 &#8216;인터넷&#8217;이라고 잘못 알고 있는 이 프로그램은 인터넷을 항해할 수 있는 여러 프로그램들 중 하나일 뿐입니다. 인터넷을 항해할 수 있도록 돕는 프로그램을 &#8216;웹브라우저&#8217;라고 부릅니다.
+인터넷 익스플로러, 많은 분들이 ‘인터넷’이라고 잘못 알고 있는 이 프로그램은 인터넷을 항해할 수 있는 여러 프로그램들 중 하나일 뿐입니다. 인터넷을 항해할 수 있도록 돕는 프로그램을 ‘웹브라우저’라고 부릅니다.
 
 즉, 우리가 흔히 볼 수 있는 아래 아이콘은 MS가 만든 웹브라우저인 인터넷 익스플로러의 아이콘일 뿐입니다.
 
@@ -44,7 +44,7 @@ tags:
 
 다른 데서 잘 나오는 사이트가 익스플로러6에서는 깨져 나오는 경우가 많습니다. 독점기업의 오만함 때문인지 국제 표준을 따르지 않고 제멋대로 코드를 인지하기 때문입니다. 때문에 사이트를 모두 디자인한 다음에 익스플로러6에 맞춰서 한 번 더 디자인을 해 줘야 하는 수고를 해야 합니다.
 
-개발자 입장에서는 일을 두 번 하는 셈이 되는 것이죠. 이것 때문에 전세계 개발자들이 IE6를 원망합니다. 진짭니다. 의심스러우시면 <a href="http://www.zdnet.co.kr/Contents/2010/02/26/zdnet20100226111020.htm" target="_blank">&#8220;IE6, 편히 잠드시길&#8221;…장례식 거행</a>이라는 기사와 <a href="http://www.ie6nomore.com/" target="_blank">IE6 no more!</a> 사이트를 방문해 보시기 바랍니다.
+개발자 입장에서는 일을 두 번 하는 셈이 되는 것이죠. 이것 때문에 전세계 개발자들이 IE6를 원망합니다. 진짭니다. 의심스러우시면 <a href="http://www.zdnet.co.kr/Contents/2010/02/26/zdnet20100226111020.htm" target="_blank">“IE6, 편히 잠드시길”…장례식 거행</a>이라는 기사와 <a href="http://www.ie6nomore.com/" target="_blank">IE6 no more!</a> 사이트를 방문해 보시기 바랍니다.
 
 <레프트21> 사이트를 수정하고 할 때도 항상 IE6에 맞춰서 몇 시간씩 추가 노동을 해야 하니 이거 참 다른 데 쓸 수 있는 역량을 낭비하고 있다는 생각이 드는 것도 어쩔 수 없는 일이지요.
 
