--- a/_posts/2010-04-23-트위터로-퍼가요-버튼이-생겼어요.md
+++ b/_posts/2010-04-23-트위터로-퍼가요-버튼이-생겼어요.md
@@ -20,7 +20,7 @@ tags:
 
 <img src="http://work.local/webmaster/wp-content/uploads/1/cfile27.uf.140293564D08474C40A271.png" class="aligncenter" width="298" height="209" alt="" />
 
-기사 하단의 좌측이예요. &#8216;트위터로 퍼가요&#8217; 버튼이 생겼죠. ^^
+기사 하단의 좌측이예요. ‘트위터로 퍼가요’ 버튼이 생겼죠. ^^
 
 트위터가 정보 유통 통로 역할을 하게 되면서 레프트21도 트위터에 진출한지 꽤 됐어요. 얼마 전 <a target="_blank" href="http://wspaper.org/article/8005">금호타이어 농성장에서 사측이 노동자들을 폭행한 것을 알린 속보</a>는 트위터를 통해 퍼져서 보통 기사들보다 20배는 많은 사람들이 봤답니다.(<a target="_blank" href="http://www.ubervu.com/conversations/www.left21.com/article/8005?show=all">여기</a> 가면 얼마나 많은 사람들이 금호타이어 기사를 추천했는지 알 수 있어요.)
 
