--- a/_posts/2011-03-28-독자의-능동성이-빠른-대응을-가능하게-한-사례-핵-발.md
+++ b/_posts/2011-03-28-독자의-능동성이-빠른-대응을-가능하게-한-사례-핵-발.md
@@ -1,6 +1,6 @@
 ---
 id: 282
-title: '독자의 능동성이 빠른 대응을 가능하게 한 사례 &#8211; 핵 발전'
+title: '독자의 능동성이 빠른 대응을 가능하게 한 사례 - 핵 발전'
 date: 2011-03-28T05:55:07+00:00
 author: 노동자 연대 웹마스터
 layout: post
@@ -22,15 +22,15 @@ tags:
 
 레프트21은 핵에 대해서 발빠르게 기사를 냈습니다만, 한나절쯤 비는 시간이 있었습니다.
 
-이 때도 많은 사람들이 &#8220;레프트21 입장은 뭘까&#8221;를 궁금해 하면서 우리 웹사이트에 들렀을 것입니다.
+이 때도 많은 사람들이 “레프트21 입장은 뭘까”를 궁금해 하면서 우리 웹사이트에 들렀을 것입니다.
 
-그런데 웹마스터인 저는 거기에 대해 충분히 인식을 하지는 못하고 있었습니다. &#8220;기사는 언제 나오지?&#8221; 하는 생각만 하고 있었을 따름이죠.
+그런데 웹마스터인 저는 거기에 대해 충분히 인식을 하지는 못하고 있었습니다. “기사는 언제 나오지?” 하는 생각만 하고 있었을 따름이죠.
 
-그런데 <a href="http://wspaper.org/article/8423" target="_self" title="[http://wspaper.org/article/8423]로 이동합니다.">레프트21 독자인 김지태 씨 <a class="simple-footnote" title="김지태 씨는 레프트21 판매로 벌금형을 선고받은 6인 중 한 명입니다." id="return-note-282-1" href="#note-282-1"><sup>1</sup></a></a>가 저에게 &#8220;다함께의 소책자인 <a href="http://www.alltogether.or.kr/4_book/book_1_view.jsp?no=15" target="_self" title="[http://www.alltogether.or.kr/4_book/book_1_view.jsp?no=15]로 이동합니다."><기후 변화 &#8211; 왜 핵 에너지는 대안이 아닌가?></a>를 레프트21에서 광고하면 어떻겠냐&#8221; 하고 말을 해 줬습니다. (다함께와 레프트21은 제휴 관계입니다.)
+그런데 <a href="http://wspaper.org/article/8423" target="_self" title="[http://wspaper.org/article/8423]로 이동합니다.">레프트21 독자인 김지태 씨 <a class="simple-footnote" title="김지태 씨는 레프트21 판매로 벌금형을 선고받은 6인 중 한 명입니다." id="return-note-282-1" href="#note-282-1"><sup>1</sup></a></a>가 저에게 “다함께의 소책자인 <a href="http://www.alltogether.or.kr/4_book/book_1_view.jsp?no=15" target="_self" title="[http://www.alltogether.or.kr/4_book/book_1_view.jsp?no=15]로 이동합니다."><기후 변화 - 왜 핵 에너지는 대안이 아닌가?></a>를 레프트21에서 광고하면 어떻겠냐” 하고 말을 해 줬습니다. (다함께와 레프트21은 제휴 관계입니다.)
 
 저는 좋은 아이디어라고 생각했습니다. 아직 기사가 나오지 않은 시점에서 웹사이트 방문자들에게 적절한 콘텐츠를 제공하는 고민을 하는 것이 웹마스터의 임무 중 하나인데, 안일하지 않았나 하는 반성을 함께 했습니다.
 
-그리고 저는 곧장 능동적 고민 모드로 들어갔습니다. 그래서 김지태 씨가 낸 아이디어에 추가로 <a href="http://wspaper.org/2_news_serial.php?serial_no=10" target="_self" title="[http://wspaper.org/2_news_serial.php?serial_no=10]로 이동합니다." class="broken_link">&#8220;핵에너지가 기후변화의 대안인가&#8221; 라는 레프트21의 예전 기획연재</a>를 소개하는 것까지 생각을 해냈습니다. (빠르게 반성을 하고 태도를 금방 바꿨다고요! ㅋ)
+그리고 저는 곧장 능동적 고민 모드로 들어갔습니다. 그래서 김지태 씨가 낸 아이디어에 추가로 <a href="http://wspaper.org/2_news_serial.php?serial_no=10" target="_self" title="[http://wspaper.org/2_news_serial.php?serial_no=10]로 이동합니다." class="broken_link">“핵에너지가 기후변화의 대안인가” 라는 레프트21의 예전 기획연재</a>를 소개하는 것까지 생각을 해냈습니다. (빠르게 반성을 하고 태도를 금방 바꿨다고요! ㅋ)
 
 아래의 광고는 그래서 탄생한 것입니다.
 
