--- a/_posts/2013-04-30-oocss-객체-지향-css-학습.md
+++ b/_posts/2013-04-30-oocss-객체-지향-css-학습.md
@@ -1,6 +1,6 @@
 ---
 id: 402
-title: 'OOCSS &#8211; 객체 지향 CSS 학습'
+title: 'OOCSS - 객체 지향 CSS 학습'
 date: 2013-04-30T18:47:54+00:00
 author: 노동자 연대 웹마스터
 layout: post
