--- a/_posts/2015-09-18-노동자-연대-텔레그램-알리미-출시-온라인-기사를-빠.md
+++ b/_posts/2015-09-18-노동자-연대-텔레그램-알리미-출시-온라인-기사를-빠.md
@@ -21,9 +21,9 @@ categories:
 
 [노동자 연대](http://wspaper.org)는 오래 전부터 [온라인 기사](http://wspaper.org/1_all_online.php)를 내 왔습니다. 격주간지지만, 지면 신문이 나오는 사이에 올려야 할 중요한 기사들이 있었습니다. 그리고 지면에 싣기에는 길거나 딱 들어맞지 않지만 독자들이 읽었으면 하는 기사들, 혹은 지난 기사들 중에 지금 시기 꼭 읽었으면 하는 기사도 있죠. 또, 다른 매체의 글도 있습니다. 방금 제가 언급한 것들이 온라인에 올려야 할 모든 기사를 포괄하는 분류는 아닐 것입니다. 대충 이런 것들이 있다는 말입니다.
 
-제 기억에 가장 인상적인 온라인 기사는?[&#8220;마녀사냥의 전형 ─ 1692년 세일럼 마녀 재판&#8221;](http://wspaper.org/article/3865)입니다. 2007년 일심회 마녀사냥 때 온라인에 실린 이 기사는 마녀사냥이란 무엇인가 하는 것을 잘 보여 줬습니다.
+제 기억에 가장 인상적인 온라인 기사는?[“마녀사냥의 전형 ─ 1692년 세일럼 마녀 재판”](http://wspaper.org/article/3865)입니다. 2007년 일심회 마녀사냥 때 온라인에 실린 이 기사는 마녀사냥이란 무엇인가 하는 것을 잘 보여 줬습니다.
 
-재미로 최초의 온라인 기사가 뭐였는지 찾아 봤습니다. 장호종 기자가 쓴 [&#8220;최열 대표 -?환경운동 &#8216;대부&#8217;에서 보수 정치권의 대부로&#8221;](http://wspaper.org/article/3193)라는 기사<sub>(2006년 6월 17일 입력)</sub>였네요. 6월 17일에 나온 <맞불> 1호에는 이 외에도 같은 날 입력한 온라인 기사가 4개 더 있습니다. 아마 당시 입력자가 저 기사를 가장 먼저 입력한 모양이예요.
+재미로 최초의 온라인 기사가 뭐였는지 찾아 봤습니다. 장호종 기자가 쓴 [“최열 대표 -?환경운동 ‘대부’에서 보수 정치권의 대부로”](http://wspaper.org/article/3193)라는 기사<sub>(2006년 6월 17일 입력)</sub>였네요. 6월 17일에 나온 <맞불> 1호에는 이 외에도 같은 날 입력한 온라인 기사가 4개 더 있습니다. 아마 당시 입력자가 저 기사를 가장 먼저 입력한 모양이예요.
 
 재미로 하나 더 찾아 봤습니다. <맞불> 1호 이래 지금까지 기사 개수에서 온라인 기사의 비중은 얼마일까요? 이 글을 쓰는 지금 시각을 기준으로 총 1만 1천 8백 9개의 기사 중 3천 5백 55개가 온라인 기사였습니다. 30퍼센트네요.
 
@@ -55,9 +55,9 @@ categories:
 
 저 개인적으로는 저 혼자 매일 매일 새 온라인 기사를 받아 봤습니다. 피드버너라는 해외 사이트를 이용해서 매일 밤에 새 온라인 기사를 받아 보게 만들었습니다. 하지만 이건 영문으로만 서비스되는 사이트였기 때문에 전체 독자를 대상으로 하기는 적절치 않았습니다.
 
-스마트폰이 대중화되면서 새로운 시도를 할 수 있게 됐습니다. 앱을 만드는 것입니다. 2013년 12월. 네, 철도 파업 와중이었습니다. 저는 당시 지하철 역 안에 있었고, 다른 개발팀원 두 명은 사무실에 있었습니다. 신속한 의사결정을 위해서 카카오톡으로 세 명이 동시에 통화를 했습니다. 철도 파업을 더 잘 지지하기 위해서 무엇을 할 수 있겠는가? 하는 토론이었습니다. 토론 주제가 된 아이디어는 &#8216;새 온라인 기사 알림을 만든다&#8217; 하는 것이었습니다.
+스마트폰이 대중화되면서 새로운 시도를 할 수 있게 됐습니다. 앱을 만드는 것입니다. 2013년 12월. 네, 철도 파업 와중이었습니다. 저는 당시 지하철 역 안에 있었고, 다른 개발팀원 두 명은 사무실에 있었습니다. 신속한 의사결정을 위해서 카카오톡으로 세 명이 동시에 통화를 했습니다. 철도 파업을 더 잘 지지하기 위해서 무엇을 할 수 있겠는가? 하는 토론이었습니다. 토론 주제가 된 아이디어는 ‘새 온라인 기사 알림을 만든다’ 하는 것이었습니다.
 
-(속칭) &#8216;꼬라 박으면&#8217; 얼마나 걸리겠냐 하는 물음에 우리 팀 최고 개발자는 이틀이라고 답했습니다. 철도 파업으로 고양돼 있던 우리 개발팀은 &#8220;그래 미친 짓 한 번 해 보자!&#8221; 하고 결정을 했고, 주말을 하얗게 불태웠습니다. 그렇게 나온 것이 안드로이드 앱 &#8216;노동자 연대 알리미&#8217;입니다(사실 2012년부터 계획은 돼 있었습니다만 하지 못하고 있었죠). 당시 웹마스터 블로그에 썼던 글을 인용해 보겠습니다.
+(속칭) ‘꼬라 박으면’ 얼마나 걸리겠냐 하는 물음에 우리 팀 최고 개발자는 이틀이라고 답했습니다. 철도 파업으로 고양돼 있던 우리 개발팀은 “그래 미친 짓 한 번 해 보자!” 하고 결정을 했고, 주말을 하얗게 불태웠습니다. 그렇게 나온 것이 안드로이드 앱 ‘노동자 연대 알리미’입니다(사실 2012년부터 계획은 돼 있었습니다만 하지 못하고 있었죠). 당시 웹마스터 블로그에 썼던 글을 인용해 보겠습니다.
 
 > “철도 파업 정당하다” 하고 주장하는 저희 <레프트21>은, 정부와 사측의 이데올로기 공세에 맞서서 파업 전부터 그리고 파업 중인 지금은 더더욱 말할 것도 없이 철도 노동자들의 투지와 사기를 고양하고, 더 효과적인 전술을 제안하기 위해 전국을 발로 뛰고 있습니다. 그에 따라 온라인 기사도 신속하게 업데이트하고 있습니다. 이런 덕인지 한 철도 노조 대의원은 “철도노조 투쟁에 관해 가장 빨리, 자세히 다룬다”, “<레프트21> 웹사이트를 통해 도움을 많이 받고 있다”라는 고마운 말씀을 해 주시기도 했습니다.
 > 
@@ -93,7 +93,7 @@ categories:
 
 그런데 2014년 9월에 큰 변화가 생긴 것이죠. 사용자가 엄청나게 늘어서 제가 주로 대화하는 거의 모든 사람이 텔레그램을 사용하기 시작했습니다.
 
-그리고 올해 초였습니다. 개발팀한테 가끔(?) 도움을 주는?[박연오](http://bakyeono.net/) 씨가 혼자 텔레그램 봇을 만들어서 새 기사 알림을 받고 있는 사실을 알게 됩니다. 그 때 &#8216;바로 이거다&#8217; 싶었습니다. 멀티 플랫폼에 무료고, 많은 사람들이 쉽게 사용할 수 있는 알림 방식은 바로 텔레그램이었던 것입니다.
+그리고 올해 초였습니다. 개발팀한테 가끔(?) 도움을 주는?[박연오](http://bakyeono.net/) 씨가 혼자 텔레그램 봇을 만들어서 새 기사 알림을 받고 있는 사실을 알게 됩니다. 그 때 ‘바로 이거다’ 싶었습니다. 멀티 플랫폼에 무료고, 많은 사람들이 쉽게 사용할 수 있는 알림 방식은 바로 텔레그램이었던 것입니다.
 
 그래서 바로 연오 씨에게 부탁을 했습니다. 당시만 해도 텔레그램에 봇 기능이 없었기 때문에, 텔레그램용 번호를 하나 마련해서 봇을 운영하려고 했습니다. 그런데, 봇 기능을 개발하자고 한 얼마 뒤 텔레그램에서 [봇 기능을 내놓습니다.](https://telegram.org/blog/bot-revolution "Telegram Bot Platform")?저는 바로 이 기능을 이용해서 노동자 연대 알리미 봇을 만들어 달라고 연오 씨에게 부탁을 했고, 연오 씨는 알겠다고 한 채로 세월아 네월아 하고 있었&#8230; 던 것은 아니고 좀 바빴습니다.
 
@@ -111,7 +111,7 @@ categories:
 
 ## 팁: 알림이 안 오는 경우
 
-텔레그램이 최신 버전이 아닌 경우에는 알리미 봇에 들어갔을 때 &#8216;시작&#8217; 버튼이 나오지 않습니다. 그럴 때는 봇에게 `/start`라고 메시지를 보내 보세요. 그러면 알림을 시작할 겁니다.
+텔레그램이 최신 버전이 아닌 경우에는 알리미 봇에 들어갔을 때 ‘시작’ 버튼이 나오지 않습니다. 그럴 때는 봇에게 `/start`라고 메시지를 보내 보세요. 그러면 알림을 시작할 겁니다.
 
 음&#8230; 그리고 이건 좀 쓸데 없는 팁이긴 하지만, 정지시키고 싶으면 `/stop`이라고 입력해 보세요. 그러면 정지될 겁니다 ㅋ
 
